--- a/data/pathfinder-bestiary-2/ABrzFoOqQohQqU6C.htm
+++ b/data/pathfinder-bestiary-2/ABrzFoOqQohQqU6C.htm
@@ -1,9 +1,8 @@
 Name: Yamaraj
-Nom: Yamaradja
-État: changé
-État d'origine: libre
+Nom: Yamaraj
+État: libre
 
 ------ Description (en) ------
 
 ------ Description (fr) ------
-Les plus grands juges parmi les psychopompes sont les yamaradjas massifs, dont la sagesse est légendaire et dont les édits sont sans appel sauf pour les huissiers ou Pharasma elle-même. Un yamaradja ressemble à un immense dragon aux écailles sombres et plumées, avec un regard sans émotion et sans passion derrière un masque à plumes. Lorsqu'ils n'exercent pas les fonctions de hauts magistrats, de seigneurs et de généraux de l'Ossuaire, les yamaradjas s'adonnent à des passe-temps très individualistes, comme le jardinage ou la littérature. Ils sont prêts à s'arrêter dans leurs fonctions pour converser avec des mortels dont les compétences correspondent à leurs intérêts.<br /><br />
+Les plus grands juges parmi les psychopompes sont les yamarajs massifs, dont la sagesse est légendaire et dont les édits sont sans appel sauf pour les huissiers ou Pharasma elle-même. Un yamaraj ressemble à un immense dragon aux écailles sombres et emplumées, avec un regard sans émotion et sans passion derrière un masque de plumes. Lorsqu'ils n'exercent pas les fonctions de hauts magistrats, de seigneurs et de généraux de du Cimetière, les yamarajs s'adonnent à des passe-temps très individualistes, comme le jardinage ou la littérature. Ils sont prêts à s'arrêter dans leurs fonctions pour converser avec des mortels dont les compétences correspondent à leurs intérêts.<br /><br />
