--- a/data/pathfinder-bestiary-2/aATQbGnSA0KOWG53.htm
+++ b/data/pathfinder-bestiary-2/aATQbGnSA0KOWG53.htm
@@ -1,8 +1,8 @@
 Name: Anancus
-Nom: 
-État: auto-trad
+Nom: Anancus
+État: libre
 
 ------ Description (en) ------
 The anancus is an ancient species of elephant with unusually long tusks and a trunk shorter than its more modern cousins.<br /><br />
 ------ Description (fr) ------
-L'anancus est une ancienne espèce d'éléphant aux défenses inhabituellement longues et à la trompe plus courte que ses cousins plus modernes ;
+L'anancus est une antique espèce d'éléphant aux défenses inhabituellement longues et à la trompe plus courte que ses cousins plus modernes.<br /><br />
