--- a/data/pathfinder-bestiary-2/b5b6J3TqbcXnmKyy.htm
+++ b/data/pathfinder-bestiary-2/b5b6J3TqbcXnmKyy.htm
@@ -1,8 +1,8 @@
 Name: Giant Dragonfly
-Nom: 
-État: auto-trad
+Nom: Libellule géante
+État: libre
 
 ------ Description (en) ------
 These buzzing insects are the size of a small horse. They are ambush predators known to hunt beasts and humanoids alike, capable of using impressive aerial acrobatics to swoop down from above and snatch away their prey.<br /><br />
 ------ Description (fr) ------
-Ces insectes bourdonnants ont la taille d'un petit cheval. Ce sont des prédateurs d'embuscade connus pour chasser aussi bien les bêtes que les humanoïdes, capables d'utiliser d'impressionnantes acrobaties aériennes pour descendre en piqué et attraper leur proie.<br /><br />
+Ces insectes bourdonnants ont la taille d'un petit cheval. Ce sont des prédateurs qui tendent des embuscades et connus pour chasser aussi bien les bêtes que les humanoïdes, capables d'utiliser d'impressionnantes acrobaties aériennes pour descendre en piqué avant d'emporter leur proie au loin.<br /><br />
