--- a/data/pathfinder-bestiary-2/C7LvY2Xxzm2xRL1M.htm
+++ b/data/pathfinder-bestiary-2/C7LvY2Xxzm2xRL1M.htm
@@ -5,4 +5,4 @@ Nom: Solifuge Géant
 ------ Description (en) ------
 The smallest of giant solifugids are still large enough to harry desert traders and their mounts.<br /><br />
 ------ Description (fr) ------
-Les plus petits des solifuges géants (sorte d'arachnidés) sont encore assez grands pour harceler les commerçants du désert et leurs montures.<br /><br />
+Les plus petits des solifuges géants (sorte d'arachnidés) sont encore assez grands pour harceler les marchands du désert et leurs montures.<br /><br />
