--- a/data/pathfinder-bestiary-2/c4uQKZaRWv9n9IHo.htm
+++ b/data/pathfinder-bestiary-2/c4uQKZaRWv9n9IHo.htm
@@ -1,7 +1,8 @@
 Name: Solar
-Nom: 
-État: vide
+Nom: Ange solar
+État: libre
 
 ------ Description (en) ------
 
 ------ Description (fr) ------
+Les solars sont parmi les plus grands de tous les anges, se plaçant juste en dessous des seigneurs empyréens. Nombre de solars servent à la droite d'une divinité ou du champion d'une cause qui profite au monde entier. La plupart des archanges ressemblent à des humanoïdes, mais pas tous — ils peuvent à l'occasion adopter des formes plus inhabituelles. Un solar typique mesure environ 2,7 m de haut et pèse environ 250 kilos, avec une voix de commandement qu'il est impossible d'ignorer. La plupart ont une peau argentée ou dorée.<br /><br />Les solars sont des pisteurs légendaires; il est dit que les plus doués d'entre eux sont capables de suivre la trace du passage d'un fiélon infernal datant de plusieurs siècles volant à travers le Plan astral.
