--- a/data/pathfinder-bestiary-2/CrAsEzLl3F2vejd3.htm
+++ b/data/pathfinder-bestiary-2/CrAsEzLl3F2vejd3.htm
@@ -1,8 +1,8 @@
 Name: Earthen Destrier
-Nom: Destrier de Terre
+Nom: Destrier terreux
 État: libre
 
 ------ Description (en) ------
 This wave of dirt takes the crude likeness of the melded forequarters of a charging warhorse and a rocky knight wielding a rudimentary lance of gray stone.<br /><br />
 ------ Description (fr) ------
-Cette vague de terre prend la forme grossière d'un quartiers avant d'un cheval de guerre en charge et d'un chevalier de pierre brandissant une lance rudimentaire de pierre grise.<br /><br />
+Cette vague de terre prend grossièrement la forme de la partie avant d'un cheval de guerre en charge et d'un chevalier de pierre brandissant une lance rudimentaire de pierre grise.<br /><br />
