--- a/data/pathfinder-bestiary-2/DM5js1XSiuiPAf3t.htm
+++ b/data/pathfinder-bestiary-2/DM5js1XSiuiPAf3t.htm
@@ -1,8 +1,8 @@
 Name: White Dracolisk
-Nom: 
-État: auto-trad
+Nom: Dracolisque blanche
+État: libre
 
 ------ Description (en) ------
 Dracolisks are rare magical crossbreeds of chromatic dragons and basilisks. None now know how they first came to be, but they have proven viable and can breed with one another as well as with basilisks. While a dracolisk appears much like a young true dragon of its parent type, its eight legs are an immediate indication that it is something more. Its coloration varies, depending on the nature of its draconic ancestry, though it's lighter on its underside and darker near its wing tips. A typical dracolisk is 15 feet long and weighs 3,000 pounds.<br /><br />
 ------ Description (fr) ------
-Les Dracolisks sont des croisements magiques rares de dragons chromatiques et de basilics. Personne ne sait aujourd'hui comment ils sont apparus, mais ils se sont avérés viables et peuvent se reproduire entre eux ainsi qu'avec des basilics. Bien qu'un dracolisk ressemble beaucoup à un jeune dragon de son type, ses huit pattes indiquent immédiatement qu'il s'agit de quelque chose de plus. Sa coloration varie en fonction de la nature de son ascendance draconique, bien qu’elle soit plus claire sur le dessous et plus foncée près de l’extrémité de ses ailes. Un dracolisk typique mesure 15 pieds de long et pèse 3 000 livres.<br /><br />
+Les dracolisques sont des croisements magiques rares de dragons chromatiques et de basilics. Personne ne sait aujourd'hui comment ils sont apparus, mais ils se sont avérés viables et peuvent se reproduire entre eux ainsi qu'avec des basilics. Bien qu'une dracolisque ressemble beaucoup à un jeune dragon de son type, ses huit pattes indiquent immédiatement qu'il s'agit de quelque chose de différent. Sa coloration varie en fonction de la nature de son ascendance draconique, bien qu’elle soit plus claire sur le dessous et plus foncée près de l’extrémité de ses ailes. Une dracolisque typique mesure 4,5 m de long et pèse 1 500 kilos.<br /><br />
