--- a/data/pathfinder-bestiary-2/e5yE4RkwLQojRYHm.htm
+++ b/data/pathfinder-bestiary-2/e5yE4RkwLQojRYHm.htm
@@ -1,8 +1,8 @@
 Name: Urdefhan Warrior
-Nom: 
-État: auto-trad
+Nom: Combattant urdefhan
+État: libre
 
 ------ Description (en) ------
 From the moment they are born, urdefhans are prepared for war. Urdefhan warriors are among the least powerful urdefhans one might encounter outside of their eerie underground cities.<br /><br />
 ------ Description (fr) ------
-Dès leur naissance, les urdefhans sont préparés à la guerre. Les guerriers Urdefhan sont parmi les urdefhans les moins puissants que l'on puisse rencontrer en dehors de leurs sinistres cités souterraines.<br /><br />
+Dès leur naissance, les urdefhans sont préparés à la guerre. Les guerriers urdefhan sont parmi les urdefhans les moins puissants que l'on puisse rencontrer en dehors de leurs sinistres cités souterraines.<br /><br />
