--- a/data/pathfinder-bestiary-2/Et2784TVZOXIbtM1.htm
+++ b/data/pathfinder-bestiary-2/Et2784TVZOXIbtM1.htm
@@ -1,9 +1,8 @@
 Name: Interlocutor
-Nom: Anatomosculptor
-État: changé
-État d'origine: libre
+Nom: Interlocuteur
+État: libre
 
 ------ Description (en) ------
 
 ------ Description (fr) ------
-Les anatomosculptors sont les chirurgiens-sculpteurs les plus talentueux des velstracs, qui découpent la chair et la remplacent par de nouvelles parties du corps constituées de muscles, de tendons et de métal. Chaque anatomosculptor structure soigneusement son apparence individuelle, mais tous sont des amalgames imposants et multi-membres des membres les plus forts, de l'os le plus dense et du métal le plus tranchant qu'ils puissent trouver. Ils recherchent continuellement de nouveaux matériaux pour se greffer à leurs formes, et leurs ennemis tués sont rarement retrouvés intacts, car peu de choses ont plus de valeur pour les anatomosculptors que les jambes, les yeux ou même le cerveau d'un puissant adversaire. Les anatomosculptors mesurent en moyenne 2 mètres de haut et pèsent environ 800 livres.<br /><br />
+Les interlocuteurs sont les chirurgiens-sculpteurs les plus talentueux des velstracs, qui découpent la chair et la remplacent par de nouvelles parties du corps constituées de muscles, de tendons et de métal. Chaque interlocuteur structure soigneusement son apparence individuelle, mais tous sont des amalgames imposants aux membres multiples, des membres plus forts, faits de l'os le plus dense et du métal le plus tranchant qu'ils puissent trouver. Ils recherchent continuellement de nouveaux matériaux pour se les greffer à leurs formes et leurs ennemis tués sont rarement retrouvés intacts, car peu de choses ont plus de valeur pour les interlocuteurs que les jambes, les yeux ou même le cerveau d'un puissant adversaire. Les interlocuteurs mesurent en moyenne 2 mètres de haut et pèsent environ 400 kilos.<br /><br />
