--- a/data/pathfinder-bestiary-2/dwyt7e1EZPjw9KBB.htm
+++ b/data/pathfinder-bestiary-2/dwyt7e1EZPjw9KBB.htm
@@ -1,8 +1,8 @@
 Name: Giant Hippocampus
-Nom: 
-État: auto-trad
+Nom: Hippocampe géant
+État: libre
 
 ------ Description (en) ------
 Living in the deepest reaches of the ocean, giant hippocampi haven't been sighted near the shore and are often regarded as legends made up by sailors.<br /><br />
 ------ Description (fr) ------
-Vivant dans les profondeurs de l'océan, les hippocampes géants n'ont pas été observés près des côtes et sont souvent considérés comme des légendes inventées par les marins ;
+Vivant dans les plus profondes couches de l'océan, les hippocampes géants n'ont pas été observés près des côtes et sont souvent considérés comme des légendes inventées par les marins.<br /><br />
