--- a/data/pathfinder-bestiary-2/eD1kydftMIp4CL2K.htm
+++ b/data/pathfinder-bestiary-2/eD1kydftMIp4CL2K.htm
@@ -1,8 +1,8 @@
 Name: Sard
-Nom: 
-État: auto-trad
+Nom: Sard
+État: libre
 
 ------ Description (en) ------
 An immense, gnarled, tree awoken with raw, primal power by one of the fey Eldest of the First World, this monster-one of the legendary Tane-skitters on huge, spidery roots and thrashes its branches as fiery lightning courses within its blackened bark, a living manifestation of the violent clash between ancient forest and stormy sky.<br /><br />
 ------ Description (fr) ------
-Un arbre immense et noueux, réveillé avec une puissance brute et primitive par l'un des aînés féeriques du Premier Monde, ce monstre - l'un des légendaires Tane - tremble sur d'énormes racines arachnéennes et secoue ses branches tandis que des éclairs enflammés courent dans son écorce noircie, une manifestation vivante du choc violent entre la forêt ancienne et le ciel orageux ;
+Un arbre immense et noueux, éveillé par une puissance brute et primordiale par l'un des aînés féeriques du Premier Monde, ce monstre - l'un des légendaires Tane - tremble sur d'énormes racines arachnéennes et secoue ses branches tandis que des éclairs enflammés courent dans son écorce noircie, une manifestation vivante du choc violent entre la forêt ancienne et le ciel orageux.<br /><br />
