--- a/data/pathfinder-bestiary-2/g41X4b3q2iDMLRt3.htm
+++ b/data/pathfinder-bestiary-2/g41X4b3q2iDMLRt3.htm
@@ -1,8 +1,8 @@
 Name: Ravener
-Nom: 
-État: auto-trad
+Nom: Dévoreur draconique
+État: libre
 
 ------ Description (en) ------
 The ravener presented here was once an ancient red dragon.<br /><br />
 ------ Description (fr) ------
-Le corbeau présenté ici était autrefois un ancien dragon rouge.<br /><br />
+Le dévoreur draconique présenté ici était autrefois un ancien dragon rouge.<br /><br />
