--- a/data/spells/abj-01-8xRzLhwGL7Dgy3EZ.htm
+++ b/data/spells/abj-01-8xRzLhwGL7Dgy3EZ.htm
@@ -1,7 +1,6 @@
 Name: Sanctuary
 Nom: Sanctuaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You ward a creature with protective energy that deters enemy attacks. Creatures attempting to attack the target must attempt a Will save each time. If the target uses a hostile action, the spell ends.</p>
@@ -11,7 +10,6 @@ Nom: Sanctuaire
 <p><strong>Critical Failure</strong> The creature wastes the action and can't attempt to attack the target for the rest of sanctuary's duration.</p>
 ------ Description (fr) ------
 <p>Vous protégez une créature grâce à une énergie protectrice qui détourne les attaques ennemies. Les créatures qui tentent d’attaquer la cible doivent effectuer un jet de Volonté à chaque fois. Si la cible utilise une action hostile, le sort se termine.</p>
-<hr />
 <p><strong>Succès critique</strong> Sanctuaire prend fin.</p>
 <p><strong>Succès</strong> La créature peut tenter son attaque et n’importe quelle autre attaque contre la cible ce tour.</p>
 <p><strong>Échec</strong> La créature ne peut pas attaquer la cible et perd son action. Elle ne peut plus tenter d’attaque contre la cible ce tour.</p>
