--- a/data/actions/hV9wXLvgH2LBaBwk.htm
+++ b/data/actions/hV9wXLvgH2LBaBwk.htm
@@ -1,10 +1,10 @@
 Name: Shootist's Draw
-Nom: 
-État: auto-trad
+Nom: Rapidité du tireur
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round;</p>
 <p><strong>Effect</strong> You Interact to draw a @Compendium[pf2e.equipment-srd.XyA6PKV46aNlLXOd]{Hand Crossbow} and Strike with it, or you Strike with a loaded hand crossbow you’re already holding and then Interact to stow it.</p>
 ------ Description (fr) ------
-<p><strong>Fréquence</strong> une fois par round;</p>
-<p><strong>Effet</strong> Vous interagissez pour tirer une @Compendium[pf2e.equipment-srd.XyA6PKV46aNlLXOd]{Arbalète de main} et frapper avec, ou vous frappez avec une arbalète de main chargée que vous tenez déjà et vous interagissez ensuite pour la ranger;</p>
+<p><strong>Fréquence</strong> une fois par round</p>
+<p><strong>Effet</strong> Vous Interagissez pour sortir une @Compendium[pf2e.equipment-srd.XyA6PKV46aNlLXOd]{Arbalète à main} et faire une Frappe avec ou vous faites une Frappe avec une arbalète à main chargée que vous tenez déjà et vous Interagissez ensuite pour la ranger.</p>
