--- a/data/feats/ancestry-09-nHoRM1gLL7MtIiCS.htm
+++ b/data/feats/ancestry-09-nHoRM1gLL7MtIiCS.htm
@@ -1,5 +1,5 @@
 Name: Djinni Magic
-Nom: Magie djinn
+Nom: Magie Djinn
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>The magic of djinn runs through your blood. You can cast @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Gust of Wind} and @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} once per day each as 2nd-level arcane innate spells.</p>
 ------ Description (fr) ------
-<p>La magie des djinns court à travers votre sang. Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
+<p>La magie des Djinns court à travers votre sang. Vous pouvez lancer @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} et @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} une fois par jour chacun comme des sorts innés arcaniques de niveau 2.</p>
