--- a/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
+++ b/data/feats/ancestry-09-o1LhDmwymrpEy1u2.htm
@@ -11,7 +11,7 @@ PrereqFR: Tirer vers le bas|expert en Athlétisme
 <hr />
 <p>You Stride up to 10 feet to enter the water, bringing the @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed} creature with you into the water.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous êtes à 3 m d'une eau d'au moins 3 m de profondeur et votre vitesse est suffisante pour atteindre l'eau en Marchant rapidement.</p>
+<p><strong>Conditions</strong> Vous êtes à 3 mètres d'une eau d'au moins 3 mètres de profondeur et votre vitesse est suffisante pour atteindre l'eau en Marchant rapidement.</p>
 <p><strong>Déclencheur</strong> Vous réussissez à saisir une créature de la même taille que vous ou plus petite.</p>
 <hr />
-<p>Vous Marchez rapidement de 3 m pour rentrer dans l'eau, emportant la créature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Agrippée} avec vous dans l'eau.</p>
+<p>Vous Marchez rapidement de 3 mètres pour rentrer dans l'eau, emportant la créature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Agrippée} avec vous dans l'eau.</p>
