--- a/data/feats/ancestry-09-Sav50NxWdLnbaDWQ.htm
+++ b/data/feats/ancestry-09-Sav50NxWdLnbaDWQ.htm
@@ -12,4 +12,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <hr />
-<p>Avec de lourds battements d'ailes, vous soulevez une bourrasque furieuse directement sur vos adversaires. Cette explosion d'air possède les effets de @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} avec un DD égal au plus élevé entre entre votre DD de classe et votre DD de sort.</p>
+<p>Avec de lourds battements d'ailes, vous soulevez une bourrasque furieuse directement sur vos adversaires. Cette explosion d'air possède les effets de @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque de vent} avec un DD égal - au plus élevé - entre votre DD de classe ou votre DD de sort.</p>
