--- a/data/feats/ancestry-09-TPX0fm9wxndpIqpk.htm
+++ b/data/feats/ancestry-09-TPX0fm9wxndpIqpk.htm
@@ -1,5 +1,5 @@
 Name: Morrigna's Spider Affinity
-Nom: Affinité arachnide de la morrigna
+Nom: Affinité arachnide des Morrignas
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>Much like morrignas, you feel an affinity for spiders. You can cast @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Animal Messenger (spiders only)}, @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Speak with Animals (spiders only)}, and @Compendium[pf2e.spells-srd.5KobTMrZeZxuXMgl]{Spider Climb} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
-<p>Comme les morrignas, vous ressentez une affinité avec les araignées. Vous pouvez lancer @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Messager animal (araignées seulement)}, @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux (araignées seulement)} et @Compendium[pf2e.spells-srd.5KobTMrZeZxuXMgl]{Escalade d'araignée} chacun une fois par jour comme des sorts divins innés de niveau 2.</p>
+<p>Comme les Morrignas, vous ressentez une affinité avec les araignées. Vous pouvez lancer @Compendium[pf2e.spells-srd.yhz9fF69uwRhnHix]{Messager animal (araignées seulement)}, @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux (araignées seulement)} et @Compendium[pf2e.spells-srd.5KobTMrZeZxuXMgl]{Escalade d'araignée} chacun une fois par jour comme des sorts divins innés de niveau 2.</p>
