--- a/data/feats/ancestry-09-uOFzs058hy144rzm.htm
+++ b/data/feats/ancestry-09-uOFzs058hy144rzm.htm
@@ -8,5 +8,5 @@ PrereqFR:
 ------ Description (en) ------
 <p>You can snare the attentions of onlookers with your unique appearance. You can cast @Compendium[pf2e.spells-srd.IihxWhRfpsBgQ5jS]{Enthrall} as a 3rd-level occult innate spell once per day.</p>
 ------ Description (fr) ------
-<p>Vous pouvez captuver l'attention des spectateur avec votre apparence unique.</p>
+<p>Vous pouvez capturer l'attention des spectateurs avec votre apparence unique.</p>
 <p>Vous pouvez lancer @Compendium[pf2e.spells-srd.IihxWhRfpsBgQ5jS]{Discours captivant} comme un sort inné occulte de niveau 3 une fois par jour.</p>
