--- a/data/feats/ancestry-09-Xwk41o4fERfM07NR.htm
+++ b/data/feats/ancestry-09-Xwk41o4fERfM07NR.htm
@@ -1,5 +1,5 @@
 Name: Rokoan Arts
-Nom: Arts rokoans
+Nom: Arts Rokoans
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>Ancestral spirits have begun to bond themselves to you, granting you powers characteristic of a rokoa. You can cast @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Speak with Animals} and @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Status}<em> </em>as primal innate spells once per day each.</p>
 ------ Description (fr) ------
-<p>Les esprits ancestraux ont commencé à see lier à vous, vous accordant les pouvoirs caractéristiques d'un rokoa. Vous pouvez lancer @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Statut} comme des sorts innés primordiaux chacun une fois par jour.</p>
+<p>Les esprits ancestraux ont commencé à se lier à vous, vous accordant les pouvoirs caractéristiques d'un Rokoa. Vous pouvez lancer @Compendium[pf2e.spells-srd.BBvV7qoXGdw09q1C]{Communication avec les animaux} et @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Statut} comme des sorts innés primordiaux chacun une fois par jour.</p>
