--- a/data/feats/ancestry-09-zpQEOqMDoujexNfA.htm
+++ b/data/feats/ancestry-09-zpQEOqMDoujexNfA.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You draw life from the water around you. If you submerge in water and rest for 10 minutes, you regain Hit Points equal to your Constitution modifier × half your level.</p>
 ------ Description (fr) ------
-<p>Vous tirez la vie de l'eau qui vous entoure. Si vous vous submergez dans l'eau et vous reposez pendant 10 minutes, vous regagner des Points de vie égaux à votre modificateur de Constitution × la moitié de votre niveau.</p>
+<p>Vous régénérez la vie de l'eau. Si vous vous submergez dans l'eau et vous reposez pendant 10 minutes, vous regagnez des Points de vie égaux à votre modificateur de Constitution × la moitié de votre niveau.</p>
