--- a/data/feats/ancestry-13-1jZ7f4TJqiFH8Ied.htm
+++ b/data/feats/ancestry-13-1jZ7f4TJqiFH8Ied.htm
@@ -8,4 +8,4 @@ PrereqFR: Éventail du dieu du vent
 ------ Description (en) ------
 <p>A wave of your fan unleashes the fury of the storm. You can Activate your <em>tengu feather fan</em> one additional time per day. Add the 5th-level @Compendium[pf2e.spells-srd.9AAkVUCwF6WVNNY2]{Lightning Bolt} spell to the spells contained within your fan.</p>
 ------ Description (fr) ------
-<p>Un coup d'éventail lâche la furie de la tempête. Vous pouvez Activer votre <em>éventail de plumes de tengu</em> une fois de plus par jour. Ajoutez le sort @Compendium[pf2e.spells-srd.9AAkVUCwF6WVNNY2]{Éclair} de niveau 5 aux sorts contenus dans votre éventail.</p>
+<p>Un coup d'éventail lâche la furie de la tempête. Vous pouvez Activer votre <em>éventail de plumes de Tengu</em> une fois de plus par jour. Ajoutez le sort @Compendium[pf2e.spells-srd.9AAkVUCwF6WVNNY2]{Éclair} de niveau 5 aux sorts contenus dans votre éventail.</p>
