--- a/data/feats/ancestry-13-3YByhZJi93ie5F45.htm
+++ b/data/feats/ancestry-13-3YByhZJi93ie5F45.htm
@@ -1,5 +1,5 @@
 Name: Shaitan Skin
-Nom: Peau du shaïtan
+Nom: Peau du Shaïtan
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>When in danger, you can harden the stone in your skin into armor, much like a shaitan. You can cast @Compendium[pf2e.spells-srd.2BV2yYPfVJ5zirZt]{Stoneskin} on yourself only, 3 times per day as a 4th-level arcane innate spell.</p>
 ------ Description (fr) ------
-<p>Lorsque vous êtes en danger, vous pouvez durcir votre peau pour la transformer en une armure, comme celle d'un shaïtan. Vous pouvez lancer @Compendium[pf2e.spells-srd.2BV2yYPfVJ5zirZt]{Peau de pierre} seluement sur vous-même, trois fois par jour comme un sort arcanique inné de niveau 4.</p>
+<p>Lorsque vous êtes en danger, vous pouvez durcir votre peau pour la transformer en une armure, comme celle d'un Shaïtan. Vous pouvez lancer @Compendium[pf2e.spells-srd.2BV2yYPfVJ5zirZt]{Peau de pierre} seluement sur vous-même, trois fois par jour comme un sort arcanique inné de niveau 4.</p>
