--- a/data/feats/ancestry-13-7Lx8rsEbBJkg6C17.htm
+++ b/data/feats/ancestry-13-7Lx8rsEbBJkg6C17.htm
@@ -11,4 +11,4 @@ PrereqFR:
 <p>Vous pouvez partager votre pouvoir avec les autres mais ils ne peuvent échapper à la malédiction lycanthropique aussi facilement que vous le pouvez. Vous pouvez lancer @Compendium[pf2e.spells-srd.YtesyvfAIwXOqISq]{Frénésie lunaire} au niveau 5 comme un sort inné primordial une fois par jour.</p>
 <p>Au niveau 15 , vous lancez Frénésie lunaire au niveau 6 à la place.</p>
 <p>Au niveau 17, votre frénésie lunaire au niveau 6 accorde ses effets ordinaires sauf que les points de vie temporaires passent à 15 et la faiblesse à l'argent passe à 15.</p>
-<p>Au niveau 20, vous lancez Frénésie lunaire au niveau 10 à la place. Le sort utilise le plus élevé entre votre DD de sort et votre DD de classe.</p>
+<p>Au niveau 20, vous lancez Frénésie lunaire au niveau 10 à la place. Le sort utilise - au plus élevé - entre votre DD de sort et votre DD de classe.</p>
