--- a/data/feats/ancestry-13-dor2F3g8gL2KVwX6.htm
+++ b/data/feats/ancestry-13-dor2F3g8gL2KVwX6.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You can travel the border between the Material and Shadow Planes and even bring others along. You can cast @Compendium[pf2e.spells-srd.rxvS7EMJ7qmexAyA]{Shadow Walk} as an occult innate spell once per day.</p>
 ------ Description (fr) ------
-<p>Vous pouvez voyager sur la bordure entre le Plan matériel et le Plan de l'ombre et même apporter les autres en même temps. Vous pouvez lancer @Compendium[pf2e.spells-srd.rxvS7EMJ7qmexAyA]{Traversée des omres} comme un sort inné occulte occulte une fois par jour.</p>
+<p>Vous pouvez voyager sur la bordure entre le Plan matériel et le Plan de l'ombre et même amener d'autres personnes avec vous. Vous pouvez lancer @Compendium[pf2e.spells-srd.rxvS7EMJ7qmexAyA]{Traversée des ombres} comme un sort inné occulte occulte une fois par jour.</p>
