--- a/data/feats/ancestry-13-EiiCCJqWnN5RYMV4.htm
+++ b/data/feats/ancestry-13-EiiCCJqWnN5RYMV4.htm
@@ -13,4 +13,4 @@ PrereqFR: Longévité experte
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
 <p>Vous avez perfectionné votre capacité à entretenir les compétences que vous avez apprises au cours de votre longue vie et vous ne vous trouvez ainsi jamais véritablement inexpérimenté dans une compétence.</p>
-<p>En méditant sur votre existence, vous pouvez modifier les compétences que vous avez sélectionnées dans le cadre des dons Longévité ancestrale et Longévité experte.</p>
+<p>En méditant sur votre existence, vous pouvez modifier les compétences que vous avez sélectionnées dans le cadre des dons @Compendium[pf2e.feats-srd.WoLh16gyDp8y9WOZ]{Longévité ancestrale} et @Compendium[pf2e.feats-srd.vfuHVSuExvtyajkW]{Longévité experte}.</p>
