--- a/data/feats/ancestry-13-pivX2SxPQjKDyvHU.htm
+++ b/data/feats/ancestry-13-pivX2SxPQjKDyvHU.htm
@@ -1,5 +1,5 @@
 Name: Iruxi Spirit Strike
-Nom: Frappe spirituelle iruxie
+Nom: Frappe spirituelle Iruxie
 PrereqEN: 
 PrereqFR: 
 État: changé
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>Your iruxi unarmed attacks channel the spiritual energy of your ancestors. Any unarmed attacks you acquire from iruxi heritages or ancestry feats gain the effects of a @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Ghost Touch} property rune.</p>
 ------ Description (fr) ------
-<p>Vos attaques à mains nues iruxie canalisent l'énergie spirituelle de votre ancêtres. Toute les attaques à mains nues que vous obtenez de votre héritage iruxi ou de dons d'ascendance obtiennent les effets de la rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
+<p>Vos attaques à mains nues Iruxie canalisent l'énergie spirituelle de votre ancêtres. Toute les attaques à mains nues que vous obtenez de votre héritage Iruxi ou de dons d'ascendance obtiennent les effets de la rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
