--- a/data/feats/ancestry-13-XuL3g2ExgadFtWbb.htm
+++ b/data/feats/ancestry-13-XuL3g2ExgadFtWbb.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You encase yourself in spiritual dinosaur bones to become a Huge dinosaur. You can cast @Compendium[pf2e.spells-srd.KhM8MhoUgoUjBMIz]{Dinosaur Form} on yourself as a 5th-level primal innate spell once per day.</p>
 ------ Description (fr) ------
-<p>Vous vous enchassez dans des os spirituels de dinosaure pour devenir un dinosaure Très Grand. Vous pouvez lancer @Compendium[pf2e.spells-srd.KhM8MhoUgoUjBMIz]{Forme de dinosaure} au niveau 5 sur vous-même comme un sort inné primordial une fois par jour.</p>
+<p>Vous vous recouvrez d'os spirituels de dinosaure pour devenir un dinosaure Très Grand. Vous pouvez lancer @Compendium[pf2e.spells-srd.KhM8MhoUgoUjBMIz]{Forme de dinosaure} au niveau 5 sur vous-même comme un sort inné primordial une fois par jour.</p>
