--- a/data/feats/ancestry-13-XzTklOArNQle7rQP.htm
+++ b/data/feats/ancestry-13-XzTklOArNQle7rQP.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>You have learned how to become invisible and remain so. You can cast 4th-level @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} as a primal innate spell once per hour.</p>
 ------ Description (fr) ------
-<p>Vous avez appris comment devenir invisible et le rester. Vous pouvez lancer @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} au niveau 4 comme un sort inné primordial une fois par heure.</p>
+<p>Vous avez appris comment devenir invisible et à le rester. Vous pouvez lancer @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibilité} au niveau 4 comme un sort inné primordial une fois par heure.</p>
