--- a/data/feats/class-02-vQiUYpdgYnXg0oDX.htm
+++ b/data/feats/class-02-vQiUYpdgYnXg0oDX.htm
@@ -18,6 +18,6 @@ PrereqFR: principes du bien
 <p>Votre Frappe punitive bénéficie d’un bonus de circonstances de +4 aux dégâts contre un mort‑vivant, ou de +6 si vous êtes un maître avec l’arme que vous utilisez.</p>
 <p>@Compendium[pf2e.feat-effects.cRqCjs21Y1gCzcUC]{Serment de lumière (Paladin)}</p>
 <p>La résistance contre les dégâts d’un mort‑vivant que vous confère votre Lueur de rédemption s’élève à 7 + votre niveau.</p> 
-<p>Si vous utilisez Pas libérateur lorsqu’il est déclenché par un mort‑vivant, votre allié bénéficie d’un bonus de circonstances de +4 aux tests conféré par votre Pas libérateur et il peut ensuite Faire un pas deux fois.</p>
+<p>Si vous utilisez @Compendium[pf2e.actionspf2e.IX1VlVCL5sFTptEE]{Pas libérateur} lorsqu’il est déclenché par un mort‑vivant, votre allié bénéficie d’un bonus de circonstances de +4 aux tests conféré par votre Pas libérateur et il peut ensuite Faire un pas deux fois.</p>
 <p>@Compendium[pf2e.feat-effects.ZnKnOPPq3cG54PlG]{Effet: Pas libérateur (contre les morts-vivants)}</p>
 <p>Vous ne considérez pas les morts‑vivants comme des autorités légitimes, même au sein des nations sur lesquelles ils règnent.</p>
