--- a/data/feats/class-04-oHdUwzUUblg3neCT.htm
+++ b/data/feats/class-04-oHdUwzUUblg3neCT.htm
@@ -10,6 +10,6 @@ PrereqFR: Explorateur des ordres
 <p><strong>Special</strong> You can take this feat multiple times. Each time you do, you must choose a different order you have selected with Order Explorer.</p>
 ------ Description (fr) ------
 <p>Vous vous êtes plongé dans l’étude approfondie des enseignements d’un nouvel ordre et avez découvert un sort d’ordre convoité.</p>
-<p>Choisissez un ordre que vous avez sélectionné avec Explorateur des ordres. Vous gagnez le sort initial de cet ordre.</p>
+<p>Choisissez un ordre que vous avez sélectionné avec @Compendium[pf2e.feats-srd.9onf3uGvZRnNLPR6]{Explorateur des ordres}. Vous gagnez le sort initial de cet ordre.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez sélectionner ce don plusieurs fois. À chaque fois, vous devez choisir un ordre différent parmi ceux que vous avez choisis avec Explorateur des ordres.</p>
