--- a/data/feats/class-04-TORYSZMLMAGgsSEW.htm
+++ b/data/feats/class-04-TORYSZMLMAGgsSEW.htm
@@ -10,4 +10,4 @@ PrereqFR: un compagnon animal
 <p>You can urge your companion to do its utmost. You can spend 2 actions to Command an Animal instead of 1 when commanding your animal companion. If you do, your animal companion uses an additional action.</p>
 ------ Description (fr) ------
 <p>Vous pouvez pousser votre compagnon à faire le maximum.</p>
-<p>pouvez dépenser 2 actions au lieu de 1 pour Diriger un animal quand vous donnez un ordre à votre compagnon animal. Le cas échéant, celui‑ci peut faire une action supplémentaire.</p>
+<p>Vous dépensez 2 actions au lieu de 1 pour @Compendium[pf2e.actionspf2e.q9nbyIF0PEBqMtYe]{Diriger un animal} quand vous donnez un ordre à votre compagnon animal. Le cas échéant, celui‑ci peut faire une action supplémentaire.</p>
