Avantage des dons généraux

--- a/data/feats/general-01-I0BhPWqYf1bbzEYg.htm
+++ b/data/feats/general-01-I0BhPWqYf1bbzEYg.htm
@@ -1,7 +1,7 @@
 Name: Diehard
 Nom: Dur à cuir
 PrereqEN: 
-Avantage:
+Avantage: Vous mourez à mourant 5, plutôt qu’à mourant 4
 PrereqFR: 
 État: officielle
 
