--- a/data/feats/general-01-Rq5wkA8DtsmbzoGV.htm
+++ b/data/feats/general-01-Rq5wkA8DtsmbzoGV.htm
@@ -1,7 +1,7 @@
 Name: Ride
 Nom: Chevaucher
 PrereqEN: 
-Avantage:
+Avantage: Réussir automatiquement à commander votre monture pour vous déplacer
 PrereqFR: 
 État: officielle
 
