--- a/data/feats/general-01-c9fHUSI5lRdXu1Ic.htm
+++ b/data/feats/general-01-c9fHUSI5lRdXu1Ic.htm
@@ -1,7 +1,7 @@
 Name: Feather Step
 Nom: Pas de plume
 PrereqEN: Dexterity 14
-Avantage:
+Avantage: Faire un pas sur les terrains difficiles
 PrereqFR: Dextérité 14
 État: officielle
 
