--- a/data/feats/general-01-i4yRvVwvXbGZDsD1.htm
+++ b/data/feats/general-01-i4yRvVwvXbGZDsD1.htm
@@ -1,7 +1,7 @@
 Name: Canny Acumen
 Nom: Perspicacité astucieuse
 PrereqEN: 
-Avantage:
+Avantage: Devenir expert en jet de sauvegarde ou en Perception
 PrereqFR: 
 État: officielle
 
