--- a/data/feats/general-01-ihN8gkHSdPG9Trte.htm
+++ b/data/feats/general-01-ihN8gkHSdPG9Trte.htm
@@ -1,7 +1,7 @@
 Name: Adopted Ancestry
 Nom: Ascendance adoptive
 PrereqEN: 
-Avantage:
+Avantage: Accéder aux dons ancestraux d’une autre ascendance
 PrereqFR: 
 État: officielle
 
