--- a/data/feats/general-01-jM72TjJ965jocBV8.htm
+++ b/data/feats/general-01-jM72TjJ965jocBV8.htm
@@ -1,7 +1,7 @@
 Name: Shield Block
 Nom: Blocage au bouclier
 PrereqEN: 
-Avantage:
+Avantage: Parer un coup avec votre bouclier
 PrereqFR: 
 État: officielle
 
@@ -10,6 +10,6 @@ PrereqFR:
 <hr />
 <p>You snap your shield in place to ward off a blow. Your shield prevents you from taking an amount of damage up to the shield's Hardness. You and the shield each take any remaining damage, possibly breaking or destroying the shield.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur.</strong> Alors que votre bouclier est levé, vous devriez subir les dégâts d’une attaque physique</p>
-<hr>
+<p><strong>Déclencheur</strong> Alors que votre bouclier est levé, vous devriez subir les dégâts d’une attaque physique</p>
+<hr />
 <p>Vous interposez votre bouclier pour repousser un coup. Votre bouclier vous empêche de subir un nombre de dégâts égal à sa Solidité. Vous et le bouclier subissez chacun les dégâts restants, brisant ou détruisant éventuellement le bouclier.</p>
