--- a/data/feats/general-01-z1Z22gTp7J1VRLSR.htm
+++ b/data/feats/general-01-z1Z22gTp7J1VRLSR.htm
@@ -1,7 +1,7 @@
 Name: Different Worlds
 Nom: Mondes différents
 PrereqEN: ability to select ancestry feats from multiple ancestries
-Avantage:
+Avantage: Crééz vous une seconde identité avec un nom, une histoire et un historique différents.
 PrereqFR: faculté de sélectionner des dons ancestraux provenant de multiples ascendances
 État: libre
 
@@ -10,4 +10,5 @@ PrereqFR: faculté de sélectionner des dons ancestraux provenant de multiples a
 <p><strong>Special</strong> At the GM's discretion, this feat can be used against non-humanoids if they have regular contact with humanoids or you are able to disguise yourself as a member of the target's ancestry or type of creature.</p>
 ------ Description (fr) ------
 <p>Vos expériences distinctes dans différentes sociétés ont évolué en des vies parfaitement séparées. Créez une seconde identité pour vous-même avec un nom, une histoire et un historique entièrement différents. Cette identité doit correspondre à un des héritages dont vous pouvez sélectionner un don ancestral. Vous obtenez le rang qualifié dans la Compétence de connaissance du second historique que vous choisissez (mais pas les autres bénéfices de ce second historique) et vous obtenez un bonus de circonstances de +4 aux tests de Duperie lorsque vous déclarez que votre seconde identité est véritable ou lorsque vous vous déguisez pour prendre cette seconde identité.</p>
+<hr />
 <p><strong>Spécial</strong> À la discrétion du MJ, ce don peut être utilisé contre les non-humanoïdes s'ils ont des contacts réguliers avec des humanoïdes ou si vous êtes capable de vous déguiser vous-même en un membre de l'héritage de votre cible ou du même type de créature.</p>
