--- a/data/feats/general-03-9jGaBxLUtevZYcZO.htm
+++ b/data/feats/general-03-9jGaBxLUtevZYcZO.htm
@@ -1,7 +1,7 @@
 Name: Untrained Improvisation
 Nom: Improvisation inexpérimentée
 PrereqEN: 
-Avantage:
+Avantage: Devenir plus habile à utiliser des compétences inexpérimentées
 PrereqFR: 
 État: officielle
 
