--- a/data/feats/general-03-m7KjpkAAh9PptJsY.htm
+++ b/data/feats/general-03-m7KjpkAAh9PptJsY.htm
@@ -1,10 +1,9 @@
 Name: Ancestral Paragon
 Nom: Parangon ancestral
 PrereqEN: 
-Avantage:
+Avantage: Gagner un don ancestral de niveau 1
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Whether through instinct, study, or magic, you feel a deeper connection to your ancestry. You gain a 1st-level ancestry feat.</p>
