--- a/data/feats/general-03-wPHZhgKzNw4VcCFt.htm
+++ b/data/feats/general-03-wPHZhgKzNw4VcCFt.htm
@@ -1,14 +1,11 @@
 Name: Skitter
 Nom: Glisseur
 PrereqEN: Dexterity 16|Fleet
-Avantage:
+Avantage: Dextérité|Vélocité
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You can scoot swiftly across the ground. You can @Compendium[pf2e.actionspf2e.Tj055UcNm6UEgtCg]{Crawl} up to half your Speed.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Dextérité 16, <a class="entity-link" data-pack="pf2e.feats-srd" data-id="Ux73dmoF8KnavyUD" draggable="true"><i class="fas fa-suitcase"></i>Vélocité</a></p>
-<hr>
-<p>Vous pouvez filer rapidement sur le sol. Vous pouvez <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="Tj055UcNm6UEgtCg" draggable="true"><i class="fas fa-suitcase"></i>Ramper</a> à la moitié de votre Vitesse.</p>
+<p>Vous pouvez filer rapidement sur le sol. Vous pouvez @Compendium[pf2e.actionspf2e.Tj055UcNm6UEgtCg]{Ramper} à la moitié de votre Vitesse.</p>
