--- a/data/feats/general-03-xT593tHyPkumPuzz.htm
+++ b/data/feats/general-03-xT593tHyPkumPuzz.htm
@@ -1,10 +1,9 @@
 Name: Improvised Repair
 Nom: Réparation improvisée
 PrereqEN: 
-Avantage:
+Avantage: Arranger rapidement un objet brisé
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You are skilled at making quick fixes to damaged equipment, but your fixes aren't meant to last forever.</p>
