--- a/data/feats/general-11-4vu6P3cYoOOeUbLK.htm
+++ b/data/feats/general-11-4vu6P3cYoOOeUbLK.htm
@@ -1,14 +1,11 @@
 Name: Incredible Investiture
 Nom: Investiture extraordinaire
 PrereqEN: Charisma 16
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Investir jusqu’à 12 objets magiques
+PrereqFR: Charisme 16
+État: officielle
 
 ------ Description (en) ------
 <p>You have an incredible ability to invest more magic items. Increase your limit on invested items from 10 to 12.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Charisme 16</p>
-<hr>
 <p>Vous avez une incroyable capacité à investir plus d’objets magiques. Augmentez la limite d’objets investis de 10 à 12.</p>
