--- a/data/feats/general-11-5ZsmRm7HvFAw2XDZ.htm
+++ b/data/feats/general-11-5ZsmRm7HvFAw2XDZ.htm
@@ -1,7 +1,7 @@
 Name: Caravan Leader
 Nom: Chef de caravane
 PrereqEN: Constitution 18|Pick Up the Pace
-Avantage:
+Avantage: Votre groupe peut s'empresser pendant beaucoup plus longtemps
 PrereqFR: Constitution 18|Gardez la cadence
 État: libre
 
