--- a/data/feats/general-11-muMOxZyduEFv8UT6.htm
+++ b/data/feats/general-11-muMOxZyduEFv8UT6.htm
@@ -1,7 +1,7 @@
 Name: A Home In Every Port
 Nom: Une maison dans chaque port
 PrereqEN: Charisma 16
-Avantage:
+Avantage: Vous passez votre temps d'intermède à trouver un endroit où vous faire héberger
 PrereqFR: Charisme 16
 État: libre
 
