--- a/data/feats/general-01-BStw1cANwx5baL6d.htm
+++ b/data/feats/general-01-BStw1cANwx5baL6d.htm
@@ -1,15 +1,15 @@
 Name: Armor Proficiency
 Nom: Maîtrise d’armure
 PrereqEN: 
-Avantage:
+Avantage: Devenir qualifié dans un type d’armure
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You become trained in light armor. If you already were trained in light armor, you gain training in medium armor. If you were trained in both, you become trained in heavy armor.</p>
 <hr />
 <p><strong>Special</strong> You can select this feat more than once. Each time, you become trained in the next type of armor above.</p>
 ------ Description (fr) ------
-<p>Vous devenez qualifié en armures légères. Si vous êtes déjà qualifié en armures légères, vous gagnez la qualification en armures moyennes. Si vous êtes qualifié pour les deux, vous devenez qualifié en armures lourdes.</p>
+<p>Vous devenez qualifié en armures légères. Si vous êtes déjà qualifié en armures légères, vous êtes qualifié avec les armures moyennes. Si vous êtes qualifié pour les deux, vous devenez qualifié en armures lourdes.</p>
+<hr />
 <p><strong>Spécial</strong> Vous pouvez sélectionner ce don plus d’une fois. Chaque fois, vous devenez qualifié dans le type d’armure supérieur.</p>
