--- a/data/feats/general-01-N8Xz5fuW6o7GW124.htm
+++ b/data/feats/general-01-N8Xz5fuW6o7GW124.htm
@@ -1,7 +1,7 @@
 Name: Fast Recovery
 Nom: Récupération rapide
 PrereqEN: Constitution 14
-Avantage:
+Avantage: Récupérer plus de PV lors du repos et récupérer plus vite de la maladie et des poisons
 PrereqFR: Constitution 14
 État: officielle
 
