--- a/data/feats/general-01-Ux73dmoF8KnavyUD.htm
+++ b/data/feats/general-01-Ux73dmoF8KnavyUD.htm
@@ -1,10 +1,9 @@
 Name: Fleet
 Nom: Vélocité
 PrereqEN: 
-Avantage:
+Avantage: Augmenter votre Vitesse de 1,5m
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You move more quickly on foot. Your Speed increases by 5 feet.</p>
@@ -14,3 +13,7 @@ PrereqFR:
 </ul>
 ------ Description (fr) ------
 <p>Vous vous déplacez beaucoup plus rapidement à pied. Votre Vitesse augmente de 1,50 m.</p>
+<p>Effet automatiquement appliqué :</p>
+<ul>
+<li>bonus non typé de +1,5 m à votre Vitesse au sol</li>
+</ul>
