--- a/data/feats/general-03-Wb3FHiDuY6Nuc0N0.htm
+++ b/data/feats/general-03-Wb3FHiDuY6Nuc0N0.htm
@@ -1,14 +1,11 @@
 Name: Hireling Manager
 Nom: Chef des employés
 PrereqEN: Charisma 14
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Les employés obtiennent un bonus de +2 aux tests de compétence
+PrereqFR: Charisme 14 
+État: libre
 
 ------ Description (en) ------
 <p>You are able to find and secure better labor than most. When securing a hireling for a service, that hireling gains a +2 circumstance bonus to all skill checks. This circumstance bonus applies to both trained and untrained hirelings and has no effect on the cost of the service or labor provided.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Charisme 14</p>
-<hr>
-<p>Vous êtes capable de trouver et d'assurer un meilleur emploi que beaucoup. Lorsque vous assurez un employé pour un service, cet employé obtient un bonus de circonstances de +2 à tous ses tests de compétences. Ce bonus de circonstance s'applique aux employés qualifiés ou non et el n'a pas d'effet sur le coût du service ou du travail fourni.</p>
+<p>Vous êtes capable de vous assurer et de trouver un meilleur employé que beaucoup. Lorsque vous vous assurez des services d'un employé, cet employé obtient un bonus de circonstances de +2 à tous ses tests de compétences. Ce bonus de circonstance s'applique aux employés qualifiés ou non et il n'a pas d'effet sur le coût du service ou du travail fourni.</p>
