--- a/data/feats/general-03-bh2jHyyYrkLMsIdX.htm
+++ b/data/feats/general-03-bh2jHyyYrkLMsIdX.htm
@@ -1,10 +1,9 @@
 Name: Prescient Planner
 Nom: Planificateur prescient
 PrereqEN: 
-Avantage:
+Avantage: Vous procure un élément d'équipement
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Cost</strong> the Price of the chosen item</p>
@@ -16,7 +15,7 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Coût</strong> le Prix de l'objet choisi</p>
 <p><strong>Conditions</strong> Vous n'avez pas utilisé cette capacité depuis la dernière fois que vous avez été capable d'acheter des biens.</p>
-<hr>
+<hr />
 <p>Vous créer régulièrement des plans alambiqués et des alternatives, en utilisant vos ressources pour les accomplir. Vous prenez 1 minute pour ôter de votre sac à dos pour soigneusement en retirer un objet que vous n'aviez pas auparavant déclaré avoir et que vous avez acheté — vous avez eu l'intuition que vous alliez avoir besoin de l'objet et l'avez acheté au cours de la dernière opportunité.</p>
 <p>Lo'bjet doit être un élément d'équipement d'aventure (d'une des tables du livre de base ou d'autres sources d'équipement) et ne peut âs être une arme, une armure, un objet alchimique ou magique ou un autre trésor.</p>
 <p>Il doit être commun avec un niveau qui n'est pas supérieur à la moitié de votre niveau et son Encombrement doit être suffisamment bas pour que le transporter ne vous ait pas rendu encombré.</p>
