--- a/data/feats/general-03-jFmdevE4nKevovzo.htm
+++ b/data/feats/general-03-jFmdevE4nKevovzo.htm
@@ -1,16 +1,15 @@
 Name: Steel Your Resolve
 Nom: Puiser dans votre résolution
 PrereqEN: 
-Avantage:
+Avantage: Regagnez des points d'endurance égaux à la moitié de votre maximum
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Cost</strong> 1 Resolve Point<br /></p>
 <hr />
 <p>Regain Stamina Points equal to half your maximum.</p>
 ------ Description (fr) ------
-<p><span><strong>Coût</strong> 1 Point de Résolution<br></span></p>
-<hr>
-<p>Regagnez des Points d'Endurance égaux à la moitié de votre maximum.</p>
+<p><strong>Coût</strong> 1 Point de Persévérance</p>
+<hr />
+<p>Vous regagnez des Points d'Endurance égaux à la moitié de votre maximum.</p>
