--- a/data/feats/general-05-dIIqejy4JAVuF0I8.htm
+++ b/data/feats/general-05-dIIqejy4JAVuF0I8.htm
@@ -1,10 +1,9 @@
 Name: Fey Influence
 Nom: Influence féérique
 PrereqEN: 
-Avantage:
+Avantage: Vous êtes une fée et obtenez un tour de magie inné primordial
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You have been exposed to powerful fey magic. You become trained in primal DCs and spell attack rolls. You gain the fey trait and one of the following features which grant an innate primal spell that can be used once per day.</p>
@@ -16,11 +15,11 @@ PrereqFR:
 </ul>
 <p>This feat gains the trait appropriate for your ancestry (human for human, goblin for goblin, etc.)</p>
 ------ Description (fr) ------
-<p><span>Vous avez été exposé à une puissante magie féérique. Vous devenez qualifié en DD primordiaux et aux attaques de sort. Vous obtenez le trait fée et une des capacités suivantes qui vous accorde un sort primordial inné qui peut être utilisé une fois par jour. </span></p>
+<p>Vous avez été exposé à une puissante magie féérique. Vous devenez qualifié en DD primordiaux et aux attaques de sort. Vous obtenez le trait fée et une des capacités suivantes qui vous accorde un sort primordial inné qui peut être utilisé une fois par jour.</p>
 <ul>
-<li><strong>Fourmilier</strong> Vous pouvez projeter votre langue devant vous pour effectuer une attaquee mortelle, obtenant @Compendium[pf2e.spells-srd.k34hDOfIIMAxNL4a]{Sinistres volutes}.</li>
-<li><strong>Dryade</strong> Votre corps est couvert de vrilles élégantes,vous accordant @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Convocation de plante ou de champignon}</li>
-<li><strong>Gremlin</strong> Vous avez de longues oreille comme une chauve souris et obtenez @Compendium[pf2e.spells-srd.7ZinJNzxq0XF0oMx]{Imprécation}</li>
-<li><strong>Monarque</strong> vous avez des vestiges de trais d'insecte et obtenez @Compendium[pf2e.spells-srd.DYdvMZ8G2LiSLVWw]{Morsure d'araignée}.</li>
+<li><strong>Fourmilier</strong> Vous pouvez projeter votre langue devant vous pour effectuer une attaque mortelle en obtenant @Compendium[pf2e.spells-srd.k34hDOfIIMAxNL4a]{Sinistres volutes}.</li>
+<li><strong>Dryade</strong> Votre corps est couvert de lianes élégantes,vous accordant @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Convocation de plante ou de champignon}</li>
+<li><strong>Gremlin</strong> Vous avez de longues oreilles comme une chauve souris et obtenez @Compendium[pf2e.spells-srd.7ZinJNzxq0XF0oMx]{Imprécation}</li>
+<li><strong>Monarque</strong> vous avez des vestiges de traits d'insecte et obtenez @Compendium[pf2e.spells-srd.DYdvMZ8G2LiSLVWw]{Morsure d'araignée}.</li>
 </ul>
-<p>&nbsp;Ce don obtient le trait approprié à votre ascendance (humain pour human, gobelin pour gobelin, etc.)</p>
+<p>Ce don obtient le trait approprié à votre ascendance (humain pour humain, gobelin pour gobelin, etc.)</p>
