--- a/data/feats/general-07-GdZLxDtFXaQI3Fop.htm
+++ b/data/feats/general-07-GdZLxDtFXaQI3Fop.htm
@@ -1,14 +1,11 @@
 Name: Expeditious Search
 Nom: Fouille accélérée
 PrereqEN: master in Perception
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Fouiller des zones en moitié moins de temps
+PrereqFR: maître en Perception
+État: officielle
 
 ------ Description (en) ------
 <p>You have a system that lets you search at great speed, finding details and secrets twice as quickly as others can. When Searching, you take half as long as usual to Search a given area. This means that while exploring, you double the Speed you can move while ensuring you've Searched an area before walking into it (up to half your Speed). If you're legendary in Perception, you instead Search areas four times as quickly.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> maître en Perception</p>
-<hr>
-<p>Vous disposez d’un système qui vous permet d’effectuer des recherches très rapidement, en trouvant les détails et les secrets deux fois plus vite que les autres. Quand vous Faites des recherches, vous mettez la moitié de la durée habituelle pour Faire des recherches dans une zone donnée. Cela signifie que pendant que vous explorez, vous doublez la Vitesse à laquelle vous pouvez vous déplacer, tout en ayant l’assurance que vous avez bien Fouillé une zone avant d’y entrer ( jusqu’à la moitié de votre Vitesse). Si vous êtes légendaire en Perception, vous Fouillez des zones quatre fois plus rapidement.</p>
+<p>Vous disposez d’un système qui vous permet d’effectuer des recherches très rapidement, en trouvant les détails et les secrets deux fois plus vite que les autres. Quand vous Cherchez, vous mettez la moitié de la durée habituelle pour Chercher dans une zone donnée. Cela signifie que pendant que vous explorez, vous doublez la Vitesse à laquelle vous pouvez vous déplacer, tout en ayant l’assurance que vous avez bien Fouillé une zone avant d’y entrer (jusqu’à la moitié de votre Vitesse). Si vous êtes légendaire en Perception, vous Fouillez des zones quatre fois plus rapidement.</p>
