--- a/data/feats/general-07-gfMP2aMs3YGONVeB.htm
+++ b/data/feats/general-07-gfMP2aMs3YGONVeB.htm
@@ -1,16 +1,15 @@
 Name: Numb to Death
 Nom: Insensible à la mort
 PrereqEN: Diehard|You have died at least once
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Votre passé vous a laissé insensible à la mort
+PrereqFR: Dur à cuir|vous êtes mort au moins une fois
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <hr />
 <p>Your past has left you numb to death's call. The first time each day that you regain Hit Points while you are @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Dying}, you regain additional Hit Points equal to your level, and you neither gain the @Compendium[pf2e.conditionitems.Yl48xTdMh3aeQYL2]{Wounded} condition nor increase the value of this condition.</p>
 ------ Description (fr) ------
-<p><span><strong>Fréquence</strong> une fois par jour<br><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.I0BhPWqYf1bbzEYg]{Dur à cuir}, vous êtes mort au moins une fois<br></span></p>
-<hr>
-<p>Votre passé vous a laissé insensible à l'appel de la mort. La première fois au cours de chaque journée que vous récupérez des Points de vie alors que vous êtes  @Compendium[pf2e.conditionspf2e.yZRUzMqrMmfLu0V1]{Mourant}, vous regagnez des Points de vie supplémentaires égaux à votre niveau et vous ne gagnez ni la condition @Compendium[pf2e.conditionspf2e.Yl48xTdMh3aeQYL2]{Blessé} ni n'augmentez la valeur de cette condition.&nbsp;</p>
+<p><strong>Fréquence</strong> une fois par jour</p>
+<hr />
+<p>Votre passé vous a laissé insensible à l'appel de la mort. La première fois au cours de chaque journée que vous récupérez des Points de vie alors que vous êtes @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourant}, vous regagnez des Points de vie supplémentaires égaux à votre niveau et vous ne gagnez ni la condition @Compendium[pf2e.conditionitems.Yl48xTdMh3aeQYL2]{Blessé} ni n'augmentez la valeur de cette condition.</p>
