--- a/data/feats/general-07-lHFz4MmebvPqTb0A.htm
+++ b/data/feats/general-07-lHFz4MmebvPqTb0A.htm
@@ -1,13 +1,11 @@
 Name: Prescient Consumable
 Nom: Consommable prescient
 PrereqEN: Prescient Planner
-Avantage:
+Avantage: Procure des objets consommables avec Planificateur prescient
 PrereqFR: Planificateur prescient
 État: libre
 
 ------ Description (en) ------
 <p>You can predict which consumables you might need in advance. When using Prescient Planner, you can procure a consumable item from your backpack, instead of a piece of adventuring gear. The consumable item must still be common with a level no higher than half your level, and its Bulk must be low enough that carrying it wouldn't have made you encumbered.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.bh2jHyyYrkLMsIdX]{Planificateur prescient}</p>
-<hr />
-<p>Vous pouvez prédire quels sont les consommables dont vous pourriez avoir besoin à l'avance. Lorsque vous utilisez Planificateur prescient, vous pouvez tirer un objet consommable de votre sac à dos, au lieu d'une pièce d'équipement d'aventurier. L'objet consommable doit toujours être courant et d'un niveau non supérieur à la moitié de votre niveau et son Encombrement doit être suffisamment faible que le porter ne vous ait pas rendu encombré.</p>
+<p>Vous pouvez prédire quels sont les consommables dont vous pourriez avoir besoin à l'avance. Lorsque vous utilisez Planificateur prescient, vous pouvez tirer un objet consommable de votre sac à dos, au lieu d'un élément d'équipement d'aventurier. L'objet consommable doit toujours être courant et d'un niveau qui n'est pas supérieur à la moitié de votre niveau et son Encombrement doit être suffisamment faible pour que le porter ne vous ait pas rendu Encombré.</p>
