--- a/data/feats/general-19-uudiUylT09WnHN7e.htm
+++ b/data/feats/general-19-uudiUylT09WnHN7e.htm
@@ -1,14 +1,11 @@
 Name: True Perception
 Nom: Perception véritable
 PrereqEN: legendary in Perception
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Vous obtenez les effets constants de Vision lucide
+PrereqFR: Légendaire en Perception
+État: libre
 
 ------ Description (en) ------
 <p>Your perceptive abilities and ability to process sensory information are so far beyond the pale that you notice minute discrepancies in all sorts of illusions and transmutations. You are constantly under the effects of a 6th-level @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{True Seeing} spell, using your Perception modifier for the counteract check.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Légendaire en Perception</p>
-<hr>
-<p>Vos facultés de perception et votre capacité à interpréter les informations sensorielles sont tellement au-delà des limites que vous remarquez les moindre divergences dans toutes sortes d'illusions et de transmutations. Vous êtes constamment sous l'effet d'un sort de <a class="entity-link" data-pack="pf2e.spells-srd" data-id="uqlxMQQeSGWEVjki" draggable="true"><i class="fas fa-suitcase"></i>Vision lucide</a> de niveau 6, en utilisant votre modificateur de Perception pour le test de contre.</p>
+<p>Vos facultés de perception et votre capacité à interpréter les informations sensorielles sont tellement au-delà des limites que vous remarquez les moindre divergences dans toutes sortes d'illusions et de transmutations. Vous êtes constamment sous l'effet d'un sort de @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision lucide} de niveau 6, en utilisant votre modificateur de Perception pour le test de contre.</p>
