--- a/data/feats/class-02-vQiUYpdgYnXg0oDX.htm
+++ b/data/feats/class-02-vQiUYpdgYnXg0oDX.htm
@@ -1,7 +1,7 @@
 Name: Shining Oath
 Nom: Serment de lumière
 PrereqEN: tenets of good
-Avantage:
+Avantage: Vous avez fait le serment de mettre un terme à l’existence des morts‑vivants
 PrereqFR: principes du bien
 État: changé
 État d'origine: officielle
