--- a/data/feats/class-04-JcXzKwrdMkNszrJQ.htm
+++ b/data/feats/class-04-JcXzKwrdMkNszrJQ.htm
@@ -1,7 +1,7 @@
 Name: Radiant Infusion
 Nom: Imprégnation irradiante
 PrereqEN: good alignment|healing font
-Avantage:
+Avantage: Vous remplissez d'énergie positive un allié vivant.
 PrereqFR: alignement bon|source de guérison
 État: changé
 État d'origine: libre
