--- a/data/feats/class-04-lL2fQJ2oRyBgga8Q.htm
+++ b/data/feats/class-04-lL2fQJ2oRyBgga8Q.htm
@@ -1,7 +1,7 @@
 Name: Occult Evolution
 Nom: Évolution occulte
 PrereqEN: bloodline the grants occult spells
-Avantage:
+Avantage: Des bribes révélatrices des secrets de l'univers vous octroient des pouvoirs. 
 PrereqFR: lignage qui accorde des sorts occultes
 État: changé
 État d'origine: officielle
