--- a/data/feats/class-04-oHdUwzUUblg3neCT.htm
+++ b/data/feats/class-04-oHdUwzUUblg3neCT.htm
@@ -1,7 +1,7 @@
 Name: Order Magic
 Nom: Magie des ordres
 PrereqEN: Order Explorer
-Avantage:
+Avantage: L'étude d'un nouvel ordre vous révèle un sort d'ordre convoité
 PrereqFR: Explorateur des ordres
 État: changé
 État d'origine: officielle
