--- a/data/feats/class-04-RsluSLtSWq1vN8Hc.htm
+++ b/data/feats/class-04-RsluSLtSWq1vN8Hc.htm
@@ -1,7 +1,7 @@
 Name: Form Control
 Nom: Contrôle de la forme
 PrereqEN: Strength 14|Wild Shape
-Avantage:
+Avantage: Vos efforts et vos précautions prolongent la durée de vos transformations.
 PrereqFR: Force 14|Morphologie sauvage
 État: changé
 État d'origine: officielle
