--- a/data/feats/class-04-Y8LHfkzGyOhPlUou.htm
+++ b/data/feats/class-04-Y8LHfkzGyOhPlUou.htm
@@ -1,7 +1,7 @@
 Name: Twin Parry
 Nom: Parade jumelée
 PrereqEN: 
-Avantage:
+Avantage: Vous utilisez vos deux armes pour parer les attaques.
 PrereqFR: 
 État: changé
 État d'origine: officielle
@@ -16,4 +16,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez deux armes de corps à corps, une dans chaque main.</p>
 <hr />
-<p>Vous utilisez vos deux armes pour parer les attaques. Vous bénéficiez d’un bonus de circonstances de +1 à la CA jusqu’au début de votre prochain tour, ou de +2 si l’une ou l’autre de vos armes a le trait parade. Vous ne bénéficiez plus de ce bonus dès que les conditions de ce don ne sont plus respectées.</p>
+<p>Vous utilisez vos deux armes pour parer les attaques. Vous bénéficiez d’un bonus de circonstances de +1 à la CA jusqu’au début de votre prochain tour, ou de +2 si l’une ou l’autre de vos armes a le trait Parade. Vous ne bénéficiez plus de ce bonus dès que les conditions de ce don ne sont plus respectées.</p>
