Avantages et dons de compétence

--- a/data/feats/general-01-2kwXTUjYYhoAGySr.htm
+++ b/data/feats/general-01-2kwXTUjYYhoAGySr.htm
@@ -1,7 +1,7 @@
 Name: Incredible Initiative
 Nom: Initiative extraordinaire
 PrereqEN: 
-Avantage:
+Avantage: +2 aux jets d’initiative
 PrereqFR: 
 État: officielle
 
