--- a/data/feats/general-01-AmP0qu7c5dlBSath.htm
+++ b/data/feats/general-01-AmP0qu7c5dlBSath.htm
@@ -1,7 +1,7 @@
 Name: Toughness
 Nom: Robustesse
 PrereqEN: 
-Avantage:
+Avantage: Augmenter votre maximum de PV et réduire le DD des tests de récupération
 PrereqFR: 
 État: officielle
 
