--- a/data/feats/general-01-aJUXbe9HJVvv0Mxa.htm
+++ b/data/feats/general-01-aJUXbe9HJVvv0Mxa.htm
@@ -1,7 +1,7 @@
 Name: Breath Control
 Nom: Contrôle de la respiration
 PrereqEN: 
-Avantage:
+Avantage: Retenir votre respiration plus longtemps et bénéficier d’avantages contre les menaces inhalées
 PrereqFR: 
 État: officielle
 
