--- a/data/feats/skill-01-1Bt7uCW2WI4sM84P.htm
+++ b/data/feats/skill-01-1Bt7uCW2WI4sM84P.htm
@@ -1,14 +1,11 @@
 Name: Dubious Knowledge
 Nom: Savoir douteux
 PrereqEN: trained in a skill with the Recall Knowledge action
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Apprenez des renseignements vrais et faux en cas d'échec au test
+PrereqFR: qualifié dans une compétence avec l'action Se souvenir
+État: officielle
 
 ------ Description (en) ------
 <p>You're a treasure trove of information, but not all of it comes from reputable sources. When you fail (but don't critically fail) a Recall Knowledge check using any skill, you learn a bit of true knowledge and a bit of erroneous knowledge, but you don't have any way to differentiate which is which.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié dans une compétence avec l'action Se souvenir</p>
-<hr>
 <p>Vous êtes une mine d’informations, mais toutes ne proviennent pas de sources fiables. Quand vous ratez un test pour Vous souvenir en utilisant n’importe quelle compétence, vous apprenez une partie d’information vraie et une partie d’information erronée, mais vous n’avez aucun moyen de différencier laquelle est quoi.</p>
