--- a/data/feats/skill-01-3G8xUlgCjRmRJNfP.htm
+++ b/data/feats/skill-01-3G8xUlgCjRmRJNfP.htm
@@ -1,14 +1,11 @@
 Name: Quick Squeeze
 Nom: Se faufiler rapidement
-PrereqEN:  trained in Acrobatics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqEN: trained in Acrobatics
+Avantage: Se déplacer rapidement lorsque vous vous Faufilez
+PrereqFR: qualifié en Acrobaties
+État: officielle
 
 ------ Description (en) ------
 <p>You Squeeze 5 feet per round (10 feet on a critical success). If you're legendary in Acrobatics, you Squeeze at full Speed.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Acrobaties</p>
-<hr>
 <p>Vous Vous faufilez de 1,5 m par round (3 m sur un succès critique). Si vous êtes légendaire en Acrobaties, vous Vous faufilez à votre pleine Vitesse.</p>
