--- a/data/feats/skill-01-59FN13nU6agKT4oa.htm
+++ b/data/feats/skill-01-59FN13nU6agKT4oa.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Bookmaking)
 Nom: Artisanat spécialisé (Confection de livres)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
