--- a/data/feats/skill-01-8qebBeOJsyRIchcu.htm
+++ b/data/feats/skill-01-8qebBeOJsyRIchcu.htm
@@ -1,10 +1,9 @@
 Name: Forager
 Nom: Glaneur
 PrereqEN: trained in Survival
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Trouver des provisions pour nourrir plusieurs créatures
+PrereqFR: qualifié en Survie
+État: officielle
 
 ------ Description (en) ------
 <p>While using Survival to Subsist, if you roll any result worse than a success, you get a success.</p>
@@ -13,11 +12,7 @@ PrereqFR:
 <p>You can choose to care for half the number of additional creatures and provide a comfortable living instead of subsistence living.</p>
 <p>Multiple smaller creatures or creatures with significantly smaller appetites than a human are counted as a single creature for this feat, and larger creatures or those with significantly greater appetites each count as multiple creatures. The GM determines how much a non-human creature needs to eat.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Survie</p>
-<hr>
-<p>Quand vous utilisez Survie pour Subsister, si vous obtenez n’importe
-quel résultat plus mauvais qu’un succès, vous obtenez un succès. Sur
-un succès, vous pouvez fournir des moyens de subsistance pour vous
-et quatre créatures supplémentaires, et pour deux fois plus sur un suc‑
-cès critique.
-Chaque fois que votre rang de maîtrise en Survie augmente, doublez le nombre de créatures supplémentaires dont vous pouvez prendre soin sur un succès (jusqu’à huit si vous êtes un expert, 16si vous êtes un maître ou 31 si vous êtes légendaire). Vous pouvez choisir de prendre soin de la moitié du nombre de créatures supplémentaires et fournir un moyen d’existence confortable au lieu d’un moyen de subsistance. Plusieurs petites créatures ou créatures avec un appétit sensiblement plus petit que celui d’un humain sont considérées comme une seule créature pour ce don, et les grandes créatures ou celles possédant un appétit sensiblement plus grand comptent pour plusieurs créatures. Le MJ détermine la quantité de nourriture qu’une créature non humaine doit manger.</p>
+<p>Quand vous utilisez Survie pour Subsister, si vous obtenez n’importe quel résultat plus mauvais qu’un succès, vous obtenez un succès. Sur un succès, vous pouvez fournir des moyens de subsistance pour vous et quatre créatures supplémentaires, et pour deux fois plus sur un succès critique.</p>
+<p>Chaque fois que votre rang de maîtrise en Survie augmente, doublez le nombre de créatures supplémentaires dont vous pouvez prendre soin sur un succès (jusqu’à 8 si vous êtes un expert, 16 si vous êtes un maître ou 32 si vous êtes légendaire).</p>
+<p>Vous pouvez choisir de prendre soin de la moitié du nombre de créatures supplémentaires et fournir un moyen d’existence confortable au lieu d’un moyen de subsistance.</p>
+<p>Plusieurs petites créatures ou créatures avec un appétit sensiblement plus petit que celui d’un humain sont considérées comme une seule créature pour ce don, et les grandes créatures ou celles possédant un appétit sensiblement plus grand comptent pour plusieurs créatures. Le MJ détermine la quantité de nourriture qu’une créature non humaine doit manger.</p>
