--- a/data/feats/skill-01-ASy9AKEIRxPYUi5o.htm
+++ b/data/feats/skill-01-ASy9AKEIRxPYUi5o.htm
@@ -1,14 +1,11 @@
 Name: Quick Repair
 Nom: Réparation rapide
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Réparer rapidement les objets
+PrereqFR: qualifié en Artisanat
+État: officielle
 
 ------ Description (en) ------
 <p>You take 1 minute to Repair an item. If you're a master in Crafting, it takes 3 actions. If you're legendary, it takes 1 action.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Artisanat</p>
-<hr>
-<p>Vous mettez 1 min à Réparer un objet. Si vous êtes un maître en Artisanat, cela prend 3 actions. Si vous êtes légendaire, cela prend 1 action.</p>
+<p>Vous mettez 1 minute à Réparer un objet. Si vous êtes un maître en Artisanat, cela prend 3 actions. Si vous êtes légendaire, cela prend 1 action.</p>
