--- a/data/feats/skill-01-C0Tcelg3BAPhML6J.htm
+++ b/data/feats/skill-01-C0Tcelg3BAPhML6J.htm
@@ -1,7 +1,7 @@
 Name: Hefty Hauler
 Nom: Portefaix
 PrereqEN: trained in Athletics
-Avantage:
+Avantage: Augmenter de 2 votre limite d’Encombrement
 PrereqFR: qualifié en Athlétisme
 État: officielle
 
