--- a/data/feats/skill-01-09PurtIanNUPfNRq.htm
+++ b/data/feats/skill-01-09PurtIanNUPfNRq.htm
@@ -1,14 +1,11 @@
 Name: Combat Climber
 Nom: Combattant-grimpeur
 PrereqEN: trained in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Combattre plus efficacement quand vous Escaladez
+PrereqFR: qualifié en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>Your techniques allow you to fight as you climb. You're not flat-footed while Climbing and can Climb with a hand occupied. You must still use another hand and both legs to Climb.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Athlétisme</p>
-<hr>
 <p>Vos techniques vous permettent de combattre quand vous escaladez. Vous n’êtes pas pris au dépourvu pendant que vous Escaladez et vous pouvez Escalader avec une main occupée. Vous devez toujours utiliser l’autre main et vos deux jambes pour Escalader.</p>
