--- a/data/feats/skill-01-22P7IFyhrF7Fbw8B.htm
+++ b/data/feats/skill-01-22P7IFyhrF7Fbw8B.htm
@@ -1,16 +1,13 @@
 Name: Root Magic
 Nom: Magie des racines
 PrereqEN: trained in Occultism
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Créer un talisman qui accorde un bonus contre un sort ou une apparition
+PrereqFR: qualifié en Occultisme
+État: libre
 
 ------ Description (en) ------
 <p>Your talismans ward against foul magic. During your daily preparations, you can assemble a small pouch with bits of herbs, hair, sacred oils, and other ritual ingredients, which you give to one ally.</p>
 <p>The first time that day the ally attempts a saving throw against a spell or haunt, they gain a +1 circumstance bonus to the roll. This bonus increases to +2 if you're an expert in Occultism or +3 if you're legendary.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong>qualifié en Occultisme</p>
-<hr>
-<p>Vos talismans protègent contre la magie foul. Au cours de vos préparatifs quotidiens, vous pouvez assembler une petite bourse avec des morceaux d'herbes, de cheveux, d'huiles sacrées et d'autres ingrédients rituels, que vous pouvez donner à un allié.</p>
+<p>Vos talismans protègent contre la magie immonde. Au cours de vos préparatifs quotidiens, vous pouvez assembler une petite bourse avec des morceaux d'herbes, de cheveux, d'huiles sacrées et d'autres ingrédients rituels, que vous pouvez donner à un allié.</p>
 <p>La première fois dans la journée que l'allié tente un jet de sauvegarde contre un sort ou une apparition, il obtient un bonus de circonstances de +1 au test. Ce bonus passe à +2 si vous êtes expert en Occultisme ou à +3 si vous êtes légendaire.</p>
