--- a/data/feats/skill-01-4RjDxgvNXNl5GG9d.htm
+++ b/data/feats/skill-01-4RjDxgvNXNl5GG9d.htm
@@ -1,14 +1,11 @@
 Name: Hobnobber
 Nom: Animal social
 PrereqEN: trained in Diplomacy
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Recueillir des informations rapidement
+PrereqFR: qualifié en Diplomatie
+État: officielle
 
 ------ Description (en) ------
 <p>You are skilled at learning information through conversation. The Gather Information exploration activity takes you half as long as normal (typically reducing the time to 1 hour). If you're a master in Diplomacy and you Gather Information at the normal speed, when you attempt to do so and roll a critical failure, you get a failure instead. There is still no guarantee that a rumor you learn with Gather Information is accurate.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Diplomatie</p>
-<hr>
 <p>Vous êtes doué pour apprendre des informations par la conversation. L’activité d’exploration Recueillir des informations vous prend deux fois moins de temps que la normale (réduisant généralement le temps d’une heure). Si vous êtes un maître en Diplomatie et que vous Recueillez des informations à la vitesse normale, quand vous tentez de le faire et que vous obtenez un échec critique, vous obtenez un échec à la place. Il n’y a toujours aucune garantie qu’une rumeur que vous apprenez avec Recueillir des informations soit exacte.</p>
