--- a/data/feats/skill-01-4tTkRyOQ0VuRBac3.htm
+++ b/data/feats/skill-01-4tTkRyOQ0VuRBac3.htm
@@ -1,17 +1,15 @@
 Name: Terrain Expertise
 Nom: Expertise du terrain
 PrereqEN: trained in Survival
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: +1 aux tests de Survie sur certains terrains
+PrereqFR: qualifié en Survie
+État: officielle
 
 ------ Description (en) ------
 <p>Your experience in navigating a certain type of terrain makes you supremely confident while doing so. You gain a +1 circumstance bonus to Survival checks in one of the following types of terrain, chosen when you select this feat: aquatic, arctic, desert, forest, mountain, plains, sky, swamp, or underground.</p>
 <hr />
 <p><strong>Special</strong> You can select this feat more than once, choosing a different type of terrain each time.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Survie</p>
-<hr>
 <p>Votre expérience de l’orientation sur un certain type de terrain vous rend extrêmement confiant pour ce faire. Vous gagnez un bonus de circonstances de +1 aux tests de Survie dans l’un des types de terrain suivants, choisi quand vous sélectionnez ce don : aquatique, arctique, désert, forêt, montagne, plaine, ciel, marais ou souterrain.</p>
+<hr />
 <p><strong>Spécial</strong> Vous pouvez sélectionner ce don plus d’une fois en choisissant un type de terrain différent à chaque fois.</p>
