--- a/data/feats/skill-01-6ON8DjFXSMITZleX.htm
+++ b/data/feats/skill-01-6ON8DjFXSMITZleX.htm
@@ -1,10 +1,9 @@
 Name: No Cause For Alarm
 Nom: Pas besoin de s'alarmer
 PrereqEN: trained in Diplomacy
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Réduisez la valeur de la condition Effrayée des créatures
+PrereqFR: qualifié en Diplomatie
+État: libre
 
 ------ Description (en) ------
 <p>You attempt to reduce panic. Attempt a Diplomacy check, comparing it to the Will DC of creatures in a 10-foot emanation around you who are @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened}. Each of them is temporarily immune for 1 hour.</p>
@@ -12,9 +11,7 @@ PrereqFR:
 <p><strong>Critical Success</strong> Reduce the creature's frightened value by 2.</p>
 <p><strong>Success</strong> Reduce the creature's frightened value by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Diplomatie</p>
-<hr>
 <p>Vous tentez de réduire la panique. Faites un test de Diplomatie et comparez le au DD de Volonté des créatures dans une émanation de 3 m autour de vous qui sont <a class="entity-link" data-pack="pf2e.conditionspf2e" data-id="TBSHQspnbcqxsmjL" draggable="true"><i class="fas fa-book-open"></i>Effrayées</a>. Chacune d'entre elle est ensuite temporairement immunisée pendant 1 heure à l'utilisation de ce don.</p>
-<hr>
+<hr />
 <p><strong>Succès critique</strong> Réduisez la valeur Effrayée de la créature de 2.</p>
 <p><strong>Succès</strong> Réduisez la valeur Effrayée de la créature de 1.</p>
