--- a/data/feats/skill-01-CnqMJR8e9jqJR7MM.htm
+++ b/data/feats/skill-01-CnqMJR8e9jqJR7MM.htm
@@ -1,14 +1,11 @@
 Name: Steady Balance
 Nom: Équilibre stable
 PrereqEN: trained in Acrobatics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Garder l’équilibre dans des conditions défavorables
+PrereqFR: qualifié en Acrobaties
+État: officielle
 
 ------ Description (en) ------
 <p>You can keep your balance easily, even in adverse conditions. Whenever you roll a success using the Balance action, you get a critical success instead. You're not flat-footed while attempting to Balance on narrow surfaces and uneven ground. Thanks to your incredible balance, you can attempt an Acrobatics check instead of a Reflex save to Grab an Edge.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Acrobaties</p>
-<hr>
 <p>Vous pouvez garder facilement votre équilibre, même dans des situations défavorables. Quand vous obtenez un succès en utilisant l’action Garder l’équilibre, vous obtenez un succès critique à la place. Vous n’êtes pas pris au dépourvu pendant que vous tentez de Garder l’équilibre sur des surfaces étroites et des terrains accidentés. Grâce à votre équilibre incroyable, vous pouvez tenter un test d’Acrobaties au lieu d’un jet de sauvegarde de Réflexes pour Vous raccrocher in extremis.</p>
