--- a/data/feats/skill-01-blMeVamjGz4ODWxq.htm
+++ b/data/feats/skill-01-blMeVamjGz4ODWxq.htm
@@ -1,14 +1,11 @@
 Name: Arcane Sense
 Nom: Sens arcanique
 PrereqEN: trained in Arcana
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Incanter détection de la magie à volonté comme un sort inné arcanique
+PrereqFR: Qualifié en Arcanes
+État: officielle
 
 ------ Description (en) ------
 <p>Your study of magic allows you to instinctively sense its presence. You can cast 1st-level detect magic at will as an arcane innate spell. If you're a master in Arcana, the spell is heightened to 3rd level; if you're legendary, it is heightened to 4th level.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Qualifié en Arcanes</p>
-<hr>
 <p>Votre apprentissage de la magie vous permet de sentir instinctivement sa présence. Vous pouvez incanter détection de la magie niveau 1 à volonté comme si c’était un sort inné arcanique. Si vous êtes un maître en Arcanes, le sort est intensifié au niveau 3. Si vous êtes légendaire, il est intensifié au niveau 4.</p>
