--- a/data/feats/skill-01-d8AjCqU30z7IOpos.htm
+++ b/data/feats/skill-01-d8AjCqU30z7IOpos.htm
@@ -1,14 +1,11 @@
 Name: Ravening's Desperation
 Nom: Énergie du désespoir
 PrereqEN:  trained in Zevgavizeb Lore
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Votre étude de la Bête de Gloutonnoir vous a enseigné comment tirer le meilleur des circonstances plutôt que de succiomber à la faiblesse
+PrereqFR: qualifié en Connaissance de Zevgavizeb
+État: libre
 
 ------ Description (en) ------
 <p>Your study of the Beast of Gluttondark has taught you how to make do in the most trying of circumstances rather than succumb to weakness. As long as your current Hit Points are less than half your maximum Hit Points, you gain a +1 circumstance bonus to Survival and Stealth checks. If your current Hit Points are less than a quarter your maximum Hit Points, the circumstance bonus is +2 instead.</p>
 ------ Description (fr) ------
-<p><span><strong>Prérequis</strong> qualifié en Connaissance de Zevgavizeb<br></span></p>
-<hr>
-<p>Votre étude de la <a href="https://2e.aonprd.com/Deities.aspx?ID=82">Bête de Gloutonnoir</a> vous a enseigné comment faire dans les circonstances les plus difficiles au lieu de succomber à la faiblesse. Tant que votre montant actuel de Points de Vie est inférieur à la moitié de votre maximum de Points de vie, vous obtenez un bonus de circonstances de +1 en Survie et aux tests de Discrétion. Si votre montant actuel de Points de Vie est de moins d'un quart de votre maximum de Points de Vie, le bonus de circonstance est de +2 à la place.&nbsp;</p>
+<p>Votre étude de la Bête de Gloutonnoir</a> vous a enseigné comment faire dans les circonstances les plus difficiles au lieu de succomber à la faiblesse. Tant que votre montant actuel de Points de Vie est inférieur à la moitié de votre maximum de Points de vie, vous obtenez un bonus de circonstances de +1 en Survie et aux tests de Discrétion. Si votre montant actuel de Points de Vie est de moins d'un quart de votre maximum de Points de Vie, le bonus de circonstance est de +2 à la place.</p>
