--- a/data/feats/class-06-10DbphslCihq8mxQ.htm
+++ b/data/feats/class-06-10DbphslCihq8mxQ.htm
@@ -1,7 +1,7 @@
 Name: Ki Blast
 Nom: Explosion ki
 PrereqEN: ki spells
-Avantage:
+Avantage: Vous pouvez déclencher un puissant cône de force en canalisant votre ki
 PrereqFR: sorts ki
 État: changé
 État d'origine: officielle
