--- a/data/feats/class-06-1p5ErCp33nGOzEsk.htm
+++ b/data/feats/class-06-1p5ErCp33nGOzEsk.htm
@@ -1,7 +1,7 @@
 Name: Disarming Stance
 Nom: Posture désarmante
 PrereqEN: trained in Athletics
-Avantage:
+Avantage: Grâce à une posture d'escrime, vous améliorez le contrôle de votre arme.
 PrereqFR: qualifié en Athlétisme
 État: changé
 État d'origine: officielle
@@ -15,4 +15,4 @@ PrereqFR: qualifié en Athlétisme
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez une seule arme de corps à corps à une main et votre autre main (ou mains) est libre.</p>
 <hr />
-<p>Vous prenez une posture d’escrime vous permettant d’améliorer le contrôle de votre arme. Quand vous gardez cette posture, vous bénéficiez d’un bonus de circonstances de +1 aux tests d’Athlétisme pour Désarmer et d’un bonus de circonstances de +1 à vos jets de Réflexes quand vous vous défendez contre les tests pour vous Désarmer. Deplus, vous pouvez tenter de Désarmer les créatures jusqu’à deux catégories de taille maximum de plus que vous.</p>
+<p>Vous prenez une posture d’escrime vous permettant d’améliorer le contrôle de votre arme. Quand vous gardez cette posture, vous bénéficiez d’un bonus de circonstances de +1 aux tests d’Athlétisme pour @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer} et d’un bonus de circonstances de +1 à vos jets de Réflexes quand vous vous défendez contre les tests pour vous Désarmer. De plus, vous pouvez tenter de Désarmer les créatures jusqu’à deux catégories de taille maximum de plus que vous.</p>
