--- a/data/feats/class-06-cTQMtd2IVlvgJwAn.htm
+++ b/data/feats/class-06-cTQMtd2IVlvgJwAn.htm
@@ -1,7 +1,7 @@
 Name: Slice and Swipe
 Nom: Couper et dérober
 PrereqEN: 
-Avantage:
+Avantage: En attaquant votre adversaire au corps-à-corps vous réussissez à lui voler un petit objet.
 PrereqFR: 
 État: changé
 État d'origine: libre
