--- a/data/feats/class-06-eZrftEihfuJBldG5.htm
+++ b/data/feats/class-06-eZrftEihfuJBldG5.htm
@@ -1,7 +1,7 @@
 Name: Advanced Bloodline
 Nom: Lignage avancé
 PrereqEN: bloodline spell
-Avantage:
+Avantage: Vous gagnez le sort de lignage avancé associé à votre lignage.
 PrereqFR: sort de lignage
 État: changé
 État d'origine: officielle
