--- a/data/feats/class-06-JdCRxwgtdQkJ1Ha6.htm
+++ b/data/feats/class-06-JdCRxwgtdQkJ1Ha6.htm
@@ -1,7 +1,7 @@
 Name: Guardian's Deflection (Fighter)
 Nom: Déviation du gardien (Guerrier)
 PrereqEN: 
-Avantage:
+Avantage: Vous utilisez votre arme pour dévier l'attaque contre votre allié.
 PrereqFR: 
 État: changé
 État d'origine: officielle
