--- a/data/feats/class-06-OWedlrKGsVZVkSnT.htm
+++ b/data/feats/class-06-OWedlrKGsVZVkSnT.htm
@@ -1,7 +1,7 @@
 Name: Insect Shape
 Nom: Morphologie d'insecte
 PrereqEN: Wild Shape
-Avantage:
+Avantage: Grâce à votre compréhension du vivant, vous diversifiez davantage les formes de créatures que vous pouvez adopter.
 PrereqFR: Morphologie sauvage
 État: changé
 État d'origine: officielle
