--- a/data/feats/class-06-Trj5azJlaOk5jgBi.htm
+++ b/data/feats/class-06-Trj5azJlaOk5jgBi.htm
@@ -1,7 +1,7 @@
 Name: Divine Weapon
 Nom: Arme divine
 PrereqEN: 
-Avantage:
+Avantage: >Vous siphonnez l’énergie résiduelle du sort et vous l’injectez dans une arme que vous maniez.
 PrereqFR: 
 État: changé
 État d'origine: officielle
