--- a/data/feats/class-06-uJpghjJtNbqKUxRd.htm
+++ b/data/feats/class-06-uJpghjJtNbqKUxRd.htm
@@ -1,7 +1,7 @@
 Name: Wolf Drag
 Nom: Traction du loup
 PrereqEN: Wolf Stance
-Avantage:
+Avantage: Vous fauchez les jambes de votre ennemi.
 PrereqFR: Posture du loup
 État: changé
 État d'origine: officielle
