avantage des dons de compétence et relecture

--- a/data/feats/skill-01-KxaYlC50zzHysJj8.htm
+++ b/data/feats/skill-01-KxaYlC50zzHysJj8.htm
@@ -1,14 +1,11 @@
 Name: Titan Wrestler
 Nom: Lutteur contre les Titans
 PrereqEN: trained in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Désarmer, Saisir, Pousser ou effectuer des Crocs-en-jambe contre des créatures plus grandes que vous
+PrereqFR: qualifié en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>You can attempt to @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Disarm}, @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Grapple}, @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shove}, or @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Trip} creatures up to two sizes larger than you, or up to three sizes larger than you if you're legendary in Athletics.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Athlétisme</p>
-<hr>
-<p>Vous pouvez tenter de Désarmer, Saisir, Pousser ou faire un Croc-enjambe aux créatures jusqu’à deux tailles plus grandes que vous, ou jusqu’à trois tailles plus grandes que vous si vous êtes légendaire en Athlétisme.</p>
+<p>Vous pouvez tenter de @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer}, @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisir}, @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Pousser} ou faire un @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Croc-en-jambe} aux créatures jusqu’à deux tailles plus grandes que vous, ou jusqu’à trois tailles plus grandes que vous si vous êtes légendaire en Athlétisme.</p>
