--- a/data/feats/skill-01-LdBzrTEZlNL4m5nI.htm
+++ b/data/feats/skill-01-LdBzrTEZlNL4m5nI.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Swamp)
 Nom: Expertise du terrain (Marais)
 PrereqEN: trained in Survival
-Avantage:
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
