--- a/data/feats/skill-01-gUqvezs2zzoTXFAI.htm
+++ b/data/feats/skill-01-gUqvezs2zzoTXFAI.htm
@@ -1,14 +1,11 @@
 Name: Group Coercion
 Nom: Contraindre un groupe
 PrereqEN: trained in Intimidation
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Contraindre plusieurs cibles simultanément
+PrereqFR: qualifié en Intimidation
+État: officielle
 
 ------ Description (en) ------
 <p>When you Coerce, you can compare your Intimidation check result to the Will DCs of two targets instead of one. It's possible to get a different degree of success for each target. The number of targets you can Coerce in a single action increases to four if you're an expert, 10 if you're a master, and 25 if you're legendary.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Intimidation</p>
-<hr>
 <p>Quand vous Contraignez, vous pouvez comparer le résultat de votre test d’Intimidation aux DD de Volonté de deux cibles au lieu d’une seule. Il est possible d’obtenir un degré de succès différent pour chaque cible. Le nombre de cibles que vous pouvez Contraindre en une action unique augmente à 4 si vous êtes un expert, 10 si vous êtes un maître et 25 si vous êtes légendaire.</p>
