--- a/data/feats/skill-01-hDGosy2ZTwnyctEP.htm
+++ b/data/feats/skill-01-hDGosy2ZTwnyctEP.htm
@@ -1,14 +1,11 @@
 Name: Oddity Identification
 Nom: Identification de bizarreries
 PrereqEN: trained in Occultism
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: +2 aux tests d’Occultisme pour Identifier la magie avec certains traits
+PrereqFR: qualifié en Occultisme
+État: officielle
 
 ------ Description (en) ------
 <p>You have a sense for spells that twist minds or reveal secrets. You gain a +2 circumstance bonus to Occultism checks to Identify Magic with the mental, possession, prediction, or scrying traits.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Occultisme</p>
-<hr>
 <p>Vous avez un don pour les sorts qui torturent l’esprit ou révèlent des secrets. Vous gagnez un bonus de circonstances de +2 aux tests d’Occultisme pour Identifier la magie avec les traits mental, possession, prédiction ou scrutation.</p>
