--- a/data/feats/skill-01-iOY6YfGBaOvMNAor.htm
+++ b/data/feats/skill-01-iOY6YfGBaOvMNAor.htm
@@ -1,14 +1,11 @@
 Name: Underwater Marauder
 Nom: Maraudeur aquatique
 PrereqEN: trained in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Combattre plus efficacement sous l’eau
+PrereqFR: qualifié en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>You've learned to fight underwater. You are not flat-footed while in water, and you don't take the usual penalties for using a bludgeoning or slashing melee weapon in water.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Athlétisme</p>
-<hr>
 <p>Vous avez appris à combattre sous l’eau. Lorsque vous êtes dans l’eau, vous n’êtes pas pris au dépourvu et vous ne subissez pas le malus habituel pour l’utilisation dans l’eau d’une arme de corps à corps contondante ou tranchante.</p>
