--- a/data/feats/skill-01-is3Oz9wt11lNq62K.htm
+++ b/data/feats/skill-01-is3Oz9wt11lNq62K.htm
@@ -1,14 +1,11 @@
 Name: Alchemical Crafting
 Nom: Artisanat alchimique
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Fabriquer des objets alchimiques
+PrereqFR: qualifié en Artisanat
+État: officielle
 
 ------ Description (en) ------
 <p>You can use the Craft activity to create alchemical items. When you select this feat, you immediately add the formulas for four common 1st-level alchemical items to your formula book.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Artisanat</p>
-<hr>
 <p>Vous pouvez utiliser l’activité Artisanat pour créer des objets alchimiques. Quand vous choisissez ce don, vous ajoutez immédiatement les formules de quatre objets alchimiques ordinaires de niveau 1 à votre formulaire.</p>
