avantages des dons de compétence

--- a/data/feats/skill-01-nmwk8yShqoYPW1QG.htm
+++ b/data/feats/skill-01-nmwk8yShqoYPW1QG.htm
@@ -1,7 +1,7 @@
 Name: Virtuosic Performer (Percussion)
 Nom: Artiste virtuose (Percussion)
 PrereqEN: trained in Performance
-Avantage:
+Avantage:+1 avec un certain type de représentation
 PrereqFR: qualifié en Représentation
 État: officielle
 
