--- a/data/feats/skill-01-LQw0yIMDUJJkq1nD.htm
+++ b/data/feats/skill-01-LQw0yIMDUJJkq1nD.htm
@@ -1,14 +1,11 @@
 Name: Cat Fall
 Nom: Chute féline
 PrereqEN: trained in Acrobatics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Traiter les chutes comme plus courtes qu’elles ne le sont
+PrereqFR: qualifié en Acrobaties
+État: officielle
 
 ------ Description (en) ------
 <p>Your catlike aerial acrobatics allow you to cushion your falls. Treat falls as 10 feet shorter. If you're an expert in Acrobatics, treat falls as 25 feet shorter. If you're a master in Acrobatics, treat them as 50 feet shorter. If you're legendary in Acrobatics, you always land on your feet and don't take damage, regardless of the distance of the fall.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Acrobaties</p>
-<hr>
-<p>Vos acrobaties aériennes félines vous permettent d’amortir vos chutes. Traitez les chutes comme étant 3 m plus courtes. Si vous êtes un expert en Acrobaties, traitez les chutes comme étant 7,5 m plus courtes. Si vous êtes un maître en Acrobaties, traitez-les comme étant 15 m plus courtes. Si vous êtes légendaire en Acrobaties, vous retombez toujours sur vos pieds et ne subissez pas de dégâts, quelle que soit la distance de la chute.</p>
+<p>Vos acrobaties aériennes félines vous permettent d’amortir vos chutes. Traitez les chutes comme étant de 3 m de moins. Si vous êtes un expert en Acrobaties, traitez les chutes comme étant 7,5 m de moins. Si vous êtes un maître en Acrobaties, traitez-les comme étant 15 m de moins. Si vous êtes légendaire en Acrobaties, vous retombez toujours sur vos pieds et ne subissez pas de dégâts, quelle que soit la distance de la chute.</p>
