--- a/data/feats/skill-01-P6icK2DbRoZ3H6kc.htm
+++ b/data/feats/skill-01-P6icK2DbRoZ3H6kc.htm
@@ -1,17 +1,14 @@
 Name: Skill Training
 Nom: Compétence qualifiante
 PrereqEN: Intelligence 12
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Devenir qualifié dans une compétence
+PrereqFR: Intelligence 12
+État: officielle
 
 ------ Description (en) ------
 <p>You become trained in the skill of your choice.</p>
 <hr />
 <p><strong>Special</strong> You can select this feat multiple times, choosing a new skill to become trained in each time.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Intelligence 12</p>
-<hr>
 <p>Vous devenez qualifié dans la compétence de votre choix.</p>
 <p><strong>Spécial</strong> Vous pouvez sélectionner ce don plusieurs fois en choisissant une nouvelle compétence à chaque fois.</p>
