--- a/data/feats/skill-01-lFwfUvH2708rl6i3.htm
+++ b/data/feats/skill-01-lFwfUvH2708rl6i3.htm
@@ -1,14 +1,11 @@
 Name: Virtuosic Performer
 Nom: Artiste virtuose
 PrereqEN: trained in Performance
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: +1 avec un certain type de représentation
+PrereqFR: qualifié en Représentation
+État: officielle
 
 ------ Description (en) ------
 <p>You have exceptional talent with one type of performance. You gain a +1 circumstance bonus when making a certain type of performance. If you are a master in Performance, this bonus increases to +2. Select one of the following specialties and apply the bonus when attempting Performance checks of that type. If it's unclear whether the specialty applies, the GM decides.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Représentation</p>
-<hr>
 <p>Vous avez un talent exceptionnel dans un type de Représentation. Vous gagnez un bonus de circonstances de +1 quand vous effectuez un certain type de représentation. Si vous êtes un maître en Représentation, ce bonus augmente à +2. Sélectionnez l’une des spécialités suivantes et appliquez le bonus quand vous tentez des tests de Représentation de ce type. S’il n’est pas évident de déterminer si la spécialité s’applique, c’est le MJ qui décide.</p>
