--- a/data/feats/skill-01-lQs2i9L09MQiZSPC.htm
+++ b/data/feats/skill-01-lQs2i9L09MQiZSPC.htm
@@ -1,14 +1,11 @@
 Name: Charlatan
 Nom: Charlatan
 PrereqEN: trained in Deception
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Vous avez appris à imiter les capacités des incantateurs en étudiant leurs gestes et leurs paroles
+PrereqFR: qualifié en Duperie
+État: libre
 
 ------ Description (en) ------
 <p>You've learned to mimic the abilities of spellcasters by studying their flourishes and words. When you activate a magic item to generate a spell effect, attempt a Deception check. If you succeed against an onlooker's Perception DC, to that onlooker, you appear to cast that spell instead. Onlookers who successfully recognize the spell realize you used a magic item, though those who later successfully identify the magic still can't determine that the source of the effect was a magic item.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Prérequisites</strong> qualifié en Duperie<br></span></p>
-<hr>
 <p>Vous avez appris à imiter les capacités des lanceurs de sort en étudiant leur gestuelle et leurs mots. Lorsque vous activez un objet magique pour générer un effet de sort, faites un test de Duperie. Si vous réussissez à battre le DD de Perception du spectateur, à ses yeux, vous apparaissez Lancer ce sort. Les spectateurs qui réussissent à Reconnaître le sort réalisent que vous avez employé un objet magique, alors que ceux qui réussissent après coup à Identifier la Magie ne peuvent toujours déterminer que la source de l'effet était un objet magique.&nbsp;&nbsp;</p>
