--- a/data/feats/skill-01-nqaSdrxAE43lZZtI.htm
+++ b/data/feats/skill-01-nqaSdrxAE43lZZtI.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Forest)
 Nom: Expertise du terrain (Forêt)
 PrereqEN: trained in Survival
-Avantage:
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
