avantage et relecture des dons de compétence

--- a/data/feats/skill-01-SRwYgPYcZNdtuqEZ.htm
+++ b/data/feats/skill-01-SRwYgPYcZNdtuqEZ.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Sky)
-Nom: Expertise terrain (Ciel)
+Nom: Expertise du terrain (Ciel)
 PrereqEN: trained in Survival
-Avantage:
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
