--- a/data/feats/skill-01-tbIMWrIRI9P9cubM.htm
+++ b/data/feats/skill-01-tbIMWrIRI9P9cubM.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Shipbuilding)
 Nom: Artisanat spécialisé (Construction navale)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
