--- a/data/feats/skill-01-PjFaiagyYzqLTQ6i.htm
+++ b/data/feats/skill-01-PjFaiagyYzqLTQ6i.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Plains)
-Nom: Expertise du terrain
+Nom: Expertise du terrain (Plaines)
 PrereqEN: trained in Survival
-Avantage:
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
