--- a/data/feats/skill-01-S8mPrjJjuObotmjZ.htm
+++ b/data/feats/skill-01-S8mPrjJjuObotmjZ.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Blacksmithing)
 Nom: Artisanat spécialisé (Forge)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
