--- a/data/feats/skill-01-sMCpihnBEpx18GBD.htm
+++ b/data/feats/skill-01-sMCpihnBEpx18GBD.htm
@@ -1,16 +1,13 @@
 Name: Inoculation
 Nom: Vaccination
 PrereqEN: trained in Medicine
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Accorder aux patients un bonus de +2 aux jets de séuvegarde pour ne pas attraper de nouveau une maladie
+PrereqFR: qualifié en Médecine
+État: libre
 
 ------ Description (en) ------
 <p>You have practice combating plague, and your patients are less likely to succumb to the same disease again for a time.</p>
 <p>When you successfully @Compendium[pf2e.actionspf2e.TC7OcDa7JlWbqMaN]{Treat a Disease} on someone and they fully recover from the disease, they gain a +2 circumstance bonus to saving throws against that same disease for 1 week.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Médecine</p>
-<hr>
 <p>Vous êtes aguerri à combattre les épidémies et vos patients sont moins à même de succomber à la même maladie par la suite pendant un temps.</p>
 <p>Lorsque vous réussissez à @Compendium[pf2e.actionspf2e.TC7OcDa7JlWbqMaN]{Soigner une maladie} sur quelqu'un et qu'il récupère complètement de la maladie, il obtient par la suite un bonus de circonstances de +2 aux jets de sauvegarde contre cette même maladie qui dure 1 semaine.</p>
