--- a/data/feats/skill-01-sMm0UfYxEPpq2Yzd.htm
+++ b/data/feats/skill-01-sMm0UfYxEPpq2Yzd.htm
@@ -1,14 +1,11 @@
 Name: Experienced Professional
 Nom: Professionnel expérimenté
 PrereqEN: trained in Lore
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Éviter les échecs critiques quand vous Gagnez de l’argent
+PrereqFR: qualifié en Connaissances
+État: officielle
 
 ------ Description (en) ------
 <p>You carefully safeguard your professional endeavors to prevent disaster. When you use Lore to Earn Income, if you roll a critical failure, you instead get a failure. If you're an expert in Lore, you gain twice as much income from a failed check to Earn Income, unless it was originally a critical failure.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Connaissances</p>
-<hr>
 <p>Vous protégez soigneusement vos activités professionnelles pour éviter les catastrophes. Quand vous utilisez Connaissances pour Gagner de l’argent, si vous obtenez un échec critique, vous obtenez un échec à la place. Si vous êtes un expert en Connaissances, vous gagnez deux fois plus de revenus suite à un test raté pour Gagner de l’argent, sauf s’il s’agissait au départ d’un échec critique.</p>
