--- a/data/feats/skill-01-sYYmBpRlRtWf5Tbh.htm
+++ b/data/feats/skill-01-sYYmBpRlRtWf5Tbh.htm
@@ -1,7 +1,7 @@
 Name: Virtuosic Performer (Strings)
 Nom: Artiste virtuose (Cordes)
 PrereqEN: trained in Performance
-Avantage:
+Avantage: +1 avec un certain type de représentation
 PrereqFR: qualifié en Représentation
 État: officielle
 
