--- a/data/feats/skill-01-t3btih0O5RUwWynt.htm
+++ b/data/feats/skill-01-t3btih0O5RUwWynt.htm
@@ -1,8 +1,8 @@
 Name: Experienced Smuggler
 Nom: Contrebandier expérimenté
 PrereqEN: Trained in Stealth
-Avantage:
-PrereqFR: 
+Avantage: Masquer beaucoup plus efficacement des objets aux yeux des observateurs
+PrereqFR: qualifié en Discrétion
 État: officielle
 
 ------ Description (en) ------
@@ -14,10 +14,8 @@ PrereqFR:
 <hr />
 <p><strong>PFS Note</strong>: This feat allows you to Earn Income with Underworld Lore with tasks of your level -1 (instead of the normal level -2).</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Discrétion</p>
-<hr />
 <p>Vous faites souvent passer des choses en contrebande sous le nez des autorités.</p>
 <p>Quand le MJ effectue votre test de Discrétion pour voir si un observateur passif remarque un petit objet que vous avez dissimulé, le MJ utilise le résultat obtenu ou 10 – la valeur la plus élevée –, en y ajoutant votre modificateur de Discrétion pour déterminer le résultat de votre test de Discrétion. Si vous êtes un maître en Discrétion, le MJ utilise le nombre obtenu ou 15, et si vous êtes légendaire, vous réussissez automatiquement à masquer un petit objet aux yeux des observateurs passifs. Cela ne procure aucun avantage à une créature qui tente un test de Perception en recherchant activement des objets cachés.</p>
 <p>En raison de vos compétences en contrebande, vous êtes plus susceptible de trouver des emplois de contrebande plus lucratifs en utilisant Connaissances de la pègre pour Gagner de l’argent.</p>
 <hr />
-<p><strong>Note pour la PFS</strong> : Ce don vous permet de Gagner de l'argent avec Connaissances de la pègre avec des tâches de votre niveau -1 (au lieu de niveau -2 habituellement).</p>
+<p><strong>Note pour la PFS</strong> Ce don vous permet de Gagner de l'argent avec Connaissances de la pègre avec des tâches de votre niveau -1 (au lieu de niveau -2 habituellement).</p>
