avantages des dons de compétence

--- a/data/feats/skill-01-XVnpntqV6w94PoOb.htm
+++ b/data/feats/skill-01-XVnpntqV6w94PoOb.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Alchemy)
 Nom: Artisanat spécialisé (Alchimie)
 PrereqEN: trained in Crafting|Alchemical Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat|Artisanat alchimique
 État: officielle
 
 ------ Description (en) ------
