--- a/data/feats/skill-01-Y5ASDpZ574Pn9CEx.htm
+++ b/data/feats/skill-01-Y5ASDpZ574Pn9CEx.htm
@@ -1,7 +1,7 @@
 Name: Virtuosic Performer (Comedy)
 Nom: Artiste virtuose (Comique)
 PrereqEN: trained in Performance
-Avantage:
+Avantage: +1 avec un certain type de représentation
 PrereqFR: qualifié en Représentations
 État: officielle
 
