--- a/data/feats/skill-01-zhIaJewomiJTkKFV.htm
+++ b/data/feats/skill-01-zhIaJewomiJTkKFV.htm
@@ -1,8 +1,8 @@
 Name: Virtuosic Performer (Winds)
 Nom: Artiste virtuose (Vents)
 PrereqEN: trained in Performance
-Avantage:
-PrereqFR: qualifié en Représentations
+Avantage: +1 avec un certain type de représentation
+PrereqFR: qualifié en Représentation
 État: officielle
 
 ------ Description (en) ------
