--- a/data/feats/skill-01-WC4xLBGmBsdOdHWu.htm
+++ b/data/feats/skill-01-WC4xLBGmBsdOdHWu.htm
@@ -1,14 +1,11 @@
 Name: Natural Medicine
 Nom: Médecine naturelle
 PrereqEN: trained in Nature
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Utiliser Nature pour Soigner les blessures
+PrereqFR: qualifié en Nature
+État: officielle
 
 ------ Description (en) ------
 <p>You can apply natural cures to heal your allies. You can use Nature instead of Medicine to Treat Wounds. If you're in the wilderness, you might have easier access to fresh ingredients, allowing you to gain a +2 circumstance bonus to your check to Treat Wounds using Nature, subject to the GM's determination.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Nature</p>
-<hr>
 <p>Vous pouvez appliquez des remèdes naturels pour soigner vos alliés. Vous pouvez utiliser Nature au lieu de Médecine pour Soigner les blessures. Si vous êtes en pleine nature, vous pourriez avoir plus facilement accès à des ingrédients frais, vous permettant de gagner un bonus de circonstances de +2 à votre test pour Soigner les blessures en utilisant Nature, soumis à la discrétion du MJ.</p>
