--- a/data/feats/skill-01-WddEyALYHfpeUjZB.htm
+++ b/data/feats/skill-01-WddEyALYHfpeUjZB.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Leatherworking)
 Nom: Artisanat spécialisé (Maroquinerie)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
