--- a/data/feats/skill-01-WeQGWvlWdeLeOlCN.htm
+++ b/data/feats/skill-01-WeQGWvlWdeLeOlCN.htm
@@ -1,10 +1,9 @@
 Name: Glean Contents
 Nom: Glaner des informations
 PrereqEN: trained in Society
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Déchiffrer un texte même lorsque vous ne voyez pas bien le document
+PrereqFR: qualifié en Société
+État: libre
 
 ------ Description (en) ------
 <p>You are adept at quickly scanning loose papers and carefully discerning the contents of sealed letters without damaging the seal.</p>
@@ -12,8 +11,6 @@ PrereqFR:
 <p>When using this feat to decipher sealed letters, your attempt to Decipher Writing gains the manipulate trait.</p>
 <p>This feat doesn't prevent witnesses from noticing your efforts, particularly with sealed letters which you must manipulate directly in order to read; you might need to attempt Deception or Stealth checks to avoid being noticed.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Société</p>
-<hr>
 <p>Vous êtes adepte à lire rapidement les papiers laissés sans surveillance et à discerner soigneusement le contenu des plis scellés sans endommager le sceau.</p>
 <p>Vous pouvez tenter des tests de Société pour @Compendium[pf2e.actionspf2e.d9gbpiQjChYDYA2L]{Déchiffrer un texte} sur un message qui est seulement partiellement entrevu, vu du verso ou inversé de votre perspective ou même scellé. Quoi qu'il en soit, sur un échec critique, le destinataire est conscient de vos efforts (par exemple, vous endommages le sceau ou perturbez les papiers consultés d'une quelconque manière).</p>
 <p>Lorsque vous utilisez ce don pour déchiffrer les lettres scellées, vos tentatives pour Déchiffrer un texte obtiennent le trait manipulation.</p>
