--- a/data/feats/skill-01-X2jGFfLU5qI5XVot.htm
+++ b/data/feats/skill-01-X2jGFfLU5qI5XVot.htm
@@ -1,14 +1,11 @@
 Name: Streetwise
 Nom: Savoir urbain
 PrereqEN: trained in Society
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Utiliser Société pour Recueillir des informations et Se souvenir
+PrereqFR: qualifié en Société
+État: officielle
 
 ------ Description (en) ------
 <p>You know about life on the streets and feel the pulse of your local settlement. You can use your Society modifier instead of your Diplomacy modifier to Gather Information. In any settlement you frequent regularly, you can use the Recall Knowledge action with Society to know the same sorts of information that you could discover with Diplomacy to Gather Information. The DC is usually significantly higher, but you know the information without spending time gathering it. If you fail to recall the information, you can still subsequently attempt to Gather Information normally.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Société</p>
-<hr>
 <p>Vous connaissez la vie dans les rues et ressentez le pouls de votre colonie locale. Vous pouvez utiliser votre modificateur de Société au lieu votre modificateur de Diplomatie pour Recueillir des informations. Dans toute colonie que vous fréquentez régulièrement, vous pouvez utiliser l’action Se souvenir avec Société pour connaître le même genre d’informations que vous pourriez découvrir avec Diplomatie pour Recueillir des informations. Le DD est généralement significativement plus haut, mais vous connaissez les informations sans passer de temps à les recueillir. Si vous échouez à vous rappeler les informations, vous pouvez toujours tenter par la suite de Recueillir des informations normalement..</p>
