--- a/data/feats/skill-01-YmzLnj4ojlf9INNP.htm
+++ b/data/feats/skill-01-YmzLnj4ojlf9INNP.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Glassmaking)
 Nom: Artisanat spécialisé (Verrerie)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat 
 État: officielle
 
 ------ Description (en) ------
