--- a/data/feats/skill-01-YvoiGWZhtbHH6NMF.htm
+++ b/data/feats/skill-01-YvoiGWZhtbHH6NMF.htm
@@ -1,8 +1,8 @@
 Name: Specialty Crafting (Woodworking)
 Nom: Artisanat spécialisé (Ébénisterie)
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
+Avantage: Gagner des bonus pour Fabriquer certains objets
+PrereqFR: qualifié en Artisanat
 État: officielle
 
 ------ Description (en) ------
