--- a/data/feats/skill-01-ZBhvJ9O8MvBFAlhq.htm
+++ b/data/feats/skill-01-ZBhvJ9O8MvBFAlhq.htm
@@ -1,14 +1,11 @@
 Name: Quick Jump
 Nom: Saut rapide
 PrereqEN: trained in Athletics
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Sauter en hauteur ou en longueur par une action unique
+PrereqFR: qualifié en Athlétisme
+État: officielle
 
 ------ Description (en) ------
 <p>You can use High Jump and Long Jump as a single action instead of 2 actions. If you do, you don't perform the initial Stride (nor do you fail if you don't Stride 10 feet).</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Athlétisme</p>
-<hr>
 <p>Vous pouvez Sauter en hauteur ou en longueur par une action unique au lieu de 2 actions. Dans ce cas, vous n’avez pas besoin de Marcher rapidement au préalable (et vous n’échouez pas si vous ne Marcher pas rapidement sur 3 m).</p>
