--- a/data/feats/skill-01-voYr7ygVcWmlg1f4.htm
+++ b/data/feats/skill-01-voYr7ygVcWmlg1f4.htm
@@ -1,14 +1,11 @@
 Name: Crafter's Appraisal
-Nom: Évaluation artisanale
+Nom: Évaluation de l'artisan
 PrereqEN: trained in Crafting
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Utiliser Artisanat pour Identifier les objets magiques
+PrereqFR: qualifié en Artisanat
+État: libre
 
 ------ Description (en) ------
 <p>Your knowledge of items' construction allows you to discern their magical effects as well. You can use Crafting instead of a skill associated with a magic tradition to @Compendium[pf2e.actionspf2e.eReSHVEPCsdkSL4G]{Identify Magic} on magic items, though not on any other sorts of magic.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis </strong>qualifié en Artisanat</p>
-<hr>
 <p>Votre connaissance de la conception des objets vous permet de discerner également leurs effets magiques. Vous pouvez utiliser Artisanat au lieu d'une compétence associée à une tradition magique pour @Compendium[pf2e.actionspf2e.eReSHVEPCsdkSL4G]{Identifier la magie} sur les objets magiques, mais pas l'utiliser sur toute autre sorte de magie.</p>
