--- a/data/feats/skill-01-wYerMk6F1RZb0Fwt.htm
+++ b/data/feats/skill-01-wYerMk6F1RZb0Fwt.htm
@@ -1,10 +1,9 @@
 Name: Battle Medicine
 Nom: Médecine militaire
 PrereqEN: trained in Medicine
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: libre
+Avantage: Vous Guérir vous-même ou un allié en combat
+PrereqFR: qualifié en Médecine
+État: libre
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are holding or wearing healer's tools.</p>
@@ -13,7 +12,6 @@ PrereqFR:
 <blockquote>Worn tools should only take 1 hand to use, as you only draw the things you need from the kit and not the entire kit. This has been marked for future errata.</blockquote>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous portez ou transportez des outils de guérisseur.</p>\n<hr>
-<p><strong>Prérequis</strong> qualifié en Médecine<br></p>
-<hr>
+<hr />
 <p>Vous pouvez vous rafistoler vous-même ou un allié adjacent, même en combat. Faites un test de Médecine avec le même DD que @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner les blessures} et restaurez un montant de points de vie correspondant. Ceci ne retire pas l’état @Compendium[pf2e.conditionspf2e.Yl48xTdMh3aeQYL2]{blessé}. Comme avec Soigner les blessures, vous pouvez tenter des tests contre des DD plus hauts si vous avez le rang de maîtrise minimum. La cible est ensuite temporairement immunisée à votre Médecine militaire pendant 1 jour.</p>
-<strong>Note</strong> Paizo a clarifié l'usage des outils portés : <blockquote>Les outils portés ne devraient prendre seulement qu'une main pour pouvoir être utilisés, car vous n'avez besoin que de tirer les choses dont vous avez besoin du kit et pas le kit entier. Ce don a été marqué pour un futur errata.</blockquote></p>
+<strong>Note</strong> Paizo a clarifié l'usage des outils portés : <blockquote>Les outils portés ne devraient prendre seulement qu'une main pour pouvoir être utilisés car vous n'avez besoin que de tirer les choses dont vous avez besoin du kit et non le kit entier. Ce don a été marqué pour un futur errata.</blockquote></p>
