--- a/data/feats/skill-01-x7EMZNMavris2aHY.htm
+++ b/data/feats/skill-01-x7EMZNMavris2aHY.htm
@@ -1,16 +1,13 @@
 Name: Student of the Canon
 Nom: Etudiant du droit canon
 PrereqEN: trained in Religion
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Reconnaître plus précisément les préceptes de votre foi ou de votre philosophie
+PrereqFR: qualifié en Religion
+État: officielle
 
 ------ Description (en) ------
 <p>You've researched many faiths enough to recognize notions about them that are unlikely to be true.</p>
 <p>If you roll a critical failure at a Religion check to Decipher Writing of a religious nature or to Recall Knowledge about the tenets of faiths, you get a failure instead.</p>
 <p>When attempting to Recall Knowledge about the tenets of your own faith, if you roll a failure, you get a success instead, and if you roll a success, you get a critical success instead.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Religion</p>
-<hr>
 <p>Vous avez étudié suffisamment de religions pour reconnaître des notions improbables à leur sujet. Si vous obtenez un échec critique à un test de Religion pour Déchiffrer un texte de nature religieuse ou pour Vous souvenir des préceptes d’une foi, vous obtenez un échec à la place. Quand vous tentez de Vous souvenir des préceptes de votre propre foi, si vous obtenez un échec, vous obtenez un succès à la place, et si vous obtenez un succès, vous obtenez un succès critique à la place.</p>
