--- a/data/feats/skill-01-xQMz6eDgX75WX2ce.htm
+++ b/data/feats/skill-01-xQMz6eDgX75WX2ce.htm
@@ -1,14 +1,11 @@
 Name: Intimidating Glare
 Nom: Regard intimidant
 PrereqEN: trained in Intimidation
-Avantage:
-PrereqFR: 
-État: changé
-État d'origine: officielle
+Avantage: Démoraliser une créature sans parler
+PrereqFR: qualifié en Intimidation
+État: officielle
 
 ------ Description (en) ------
 <p>You can Demoralize with a mere glare. When you do, Demoralize loses the auditory trait and gains the visual trait, and you don't take a penalty if the creature doesn't understand your language.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Intimidation</p>
-<hr>
 <p>Vous pouvez Démoraliser d’un simple regard. Quand vous le faites, Démoraliser perd le trait audible et gagne le trait visuel, et vous ne subissez pas de malus si la créature ne comprend pas votre langue.</p>
