--- a/data/feats/skill-01-zWOUgpeWb0oA0u7I.htm
+++ b/data/feats/skill-01-zWOUgpeWb0oA0u7I.htm
@@ -1,7 +1,7 @@
 Name: Terrain Expertise (Underground)
 Nom: Expertise du terrain (souterrain)
 PrereqEN: trained in Survival
-Avantage:
+Avantage: +1 aux tests de Survie sur certains terrains
 PrereqFR: qualifié en Survie
 État: officielle
 
